@@ -28,10 +28,11 @@ import picocli.CommandLine;
 
 import java.io.IOException;
 import java.io.PrintStream;
+import java.io.PrintWriter;
+import java.io.StringWriter;
 import java.nio.file.Files;
 import java.nio.file.LinkOption;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -45,16 +46,19 @@ import static io.ballerina.projects.util.ProjectConstants.CONFIG_DIR;
  *
  * @since 0.8.0
  */
-public class LauncherUtils {
+public final class LauncherUtils {
+
+    private LauncherUtils() {
+    }
 
     public static Path getSourceRootPath(String sourceRoot) {
         // Get source root path.
         Path sourceRootPath;
         if (sourceRoot == null || sourceRoot.isEmpty()) {
-            sourceRootPath = Paths.get(System.getProperty("user.dir"));
+            sourceRootPath = Path.of(System.getProperty("user.dir"));
         } else {
             try {
-                sourceRootPath = Paths.get(sourceRoot).toRealPath(LinkOption.NOFOLLOW_LINKS);
+                sourceRootPath = Path.of(sourceRoot).toRealPath(LinkOption.NOFOLLOW_LINKS);
             } catch (IOException e) {
                 throw new RuntimeException("error reading from directory: " + sourceRoot + " reason: " +
                         e.getMessage(), e);
@@ -82,17 +86,24 @@ public class LauncherUtils {
 
     public static BLauncherException createLauncherException(String errorPrefix, Throwable cause) {
         String message;
-        if (cause instanceof BError) {
-            message = ((BError) cause).getPrintableStackTrace();
+        if (cause instanceof BError bError) {
+            message = bError.getPrintableStackTrace();
         } else {
-            message = cause.toString();
+            StringWriter sw = new StringWriter();
+            cause.printStackTrace(new PrintWriter(sw));
+            message = sw.toString();
         }
         BLauncherException launcherException = new BLauncherException();
         launcherException.addMessage("error: " + errorPrefix + message);
         return launcherException;
     }
 
-    static void printLauncherException(BLauncherException e, PrintStream outStream) {
+
+    public static String prepareCompilerErrorMessage(String message) {
+        return "error: " + LauncherUtils.makeFirstLetterLowerCase(message);
+    }
+
+    public static void printLauncherException(BLauncherException e, PrintStream outStream) {
         List<String> errorMessages = e.getMessages();
         errorMessages.forEach(outStream::println);
     }
@@ -121,12 +132,10 @@ public class LauncherUtils {
                 .sorted().toList();
 
         if (!toolNames.isEmpty()) {
-            toolNames.forEach(toolName -> {
-                balToolsManifest.getActiveTool(toolName).ifPresent(tool -> {
+            toolNames.forEach(toolName ->
+                balToolsManifest.getActiveTool(toolName).ifPresent(tool ->
                     activeToolsVsRepos.put(toolName, tool.repository() == null ? "" : "[" + tool.repository()
-                            .toUpperCase() + "] ");
-                });
-            });
+                            .toUpperCase() + "] ")));
             helpBuilder.append("\n\n   Tool Commands:");
             toolNames.forEach(key -> generateCommandDescription(subCommands.get(key), helpBuilder,
                     activeToolsVsRepos.get(key)));
