@@ -23,6 +23,7 @@ import io.ballerina.projects.util.FileUtils;
 import io.ballerina.projects.util.ProjectConstants;
 import io.ballerina.projects.util.ProjectUtils;
 import org.testng.Assert;
+import org.testng.SkipException;
 import org.testng.annotations.AfterClass;
 import org.testng.annotations.BeforeClass;
 import org.testng.annotations.DataProvider;
@@ -37,7 +38,6 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.FileVisitResult;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.SimpleFileVisitor;
 import java.nio.file.StandardCopyOption;
 import java.nio.file.attribute.BasicFileAttributes;
@@ -45,6 +45,7 @@ import java.util.Locale;
 
 import static io.ballerina.cli.cmd.CommandOutputUtils.getOutput;
 import static io.ballerina.cli.cmd.CommandOutputUtils.readFileAsString;
+import static io.ballerina.cli.utils.OsUtils.isWindows;
 import static io.ballerina.projects.util.ProjectConstants.TOOL_DIR;
 import static io.ballerina.projects.util.ProjectConstants.USER_NAME;
 
@@ -57,7 +58,7 @@ public class NewCommandTest extends BaseCommandTest {
 
     Path testResources;
     Path centralCache;
-    private PrintStream errStream = System.err;
+    private final PrintStream errStream = System.err;
 
     @DataProvider(name = "invalidProjectNames")
     public Object[][] provideInvalidProjectNames() {
@@ -67,10 +68,11 @@ public class NewCommandTest extends BaseCommandTest {
         };
     }
 
+    @Override
     @BeforeClass
     public void setup() throws IOException {
         super.setup();
-        testResources = Paths.get("src/test/resources/test-resources");
+        testResources = Path.of("src/test/resources/test-resources");
         centralCache = homeCache.resolve("repositories/central.ballerina.io").resolve("bala");
         Files.createDirectories(centralCache);
 
@@ -109,7 +111,7 @@ public class NewCommandTest extends BaseCommandTest {
 
         Assert.assertTrue(Files.exists(packageDir));
         Assert.assertTrue(Files.exists(packageDir.resolve(ProjectConstants.BALLERINA_TOML)));
-        String name = Paths.get(args[0]).getFileName().toString();
+        String name = Path.of(args[0]).getFileName().toString();
         String tomlContent = Files.readString(
                 packageDir.resolve(ProjectConstants.BALLERINA_TOML), StandardCharsets.UTF_8);
         String expectedContent = "[package]\n" +
@@ -126,17 +128,19 @@ public class NewCommandTest extends BaseCommandTest {
         Assert.assertTrue(Files.exists(packageDir.resolve(ProjectConstants.GITIGNORE_FILE_NAME)));
         String gitignoreContent = Files.readString(
                 packageDir.resolve(ProjectConstants.GITIGNORE_FILE_NAME), StandardCharsets.UTF_8);
-        String expectedGitignoreContent = "# Ballerina generates this directory during the compilation of a package. " +
-                "\n# It contains compiler-generated artifacts and the final executable if this is an application " +
-                "package.\ntarget/\n" +
-                "\n" +
-                "# Ballerina maintains the compiler-generated source code here.\n" +
-                "# Remove this if you want to commit generated sources.\n" +
-                "generated/\n" +
-                "\n" +
-                "# Contains configuration values used during development time.\n" +
-                "# See https://ballerina.io/learn/provide-values-to-configurable-variables/ for more details.\n" +
-                "Config.toml\n";
+        String expectedGitignoreContent = """
+                # Ballerina generates this directory during the compilation of a package.
+                # It contains compiler-generated artifacts and the final executable if this is an application package.
+                target/
+
+                # Ballerina maintains the compiler-generated source code here.
+                # Remove this if you want to commit generated sources.
+                generated/
+
+                # Contains configuration values used during development time.
+                # See https://ballerina.io/learn/provide-values-to-configurable-variables/ for more details.
+                Config.toml
+                """;
         Assert.assertEquals(gitignoreContent.trim(), expectedGitignoreContent.trim());
         Assert.assertTrue(readOutput().contains("Created new package"));
 
@@ -161,7 +165,7 @@ public class NewCommandTest extends BaseCommandTest {
 
         Assert.assertTrue(Files.exists(packageDir));
         Assert.assertTrue(Files.exists(packageDir.resolve(ProjectConstants.BALLERINA_TOML)));
-        String name = Paths.get(args[0]).getFileName().toString();
+        String name = Path.of(args[0]).getFileName().toString();
         String tomlContent = Files.readString(
                 packageDir.resolve(ProjectConstants.BALLERINA_TOML), StandardCharsets.UTF_8);
         String expectedContent = "[package]\n" +
@@ -178,17 +182,19 @@ public class NewCommandTest extends BaseCommandTest {
         Assert.assertTrue(Files.exists(packageDir.resolve(ProjectConstants.GITIGNORE_FILE_NAME)));
         String gitignoreContent = Files.readString(
                 packageDir.resolve(ProjectConstants.GITIGNORE_FILE_NAME), StandardCharsets.UTF_8);
-        String expectedGitignoreContent = "# Ballerina generates this directory during the compilation of a package. " +
-                "\n# It contains compiler-generated artifacts and the final executable if this is an application " +
-                "package.\ntarget/\n" +
-                "\n" +
-                "# Ballerina maintains the compiler-generated source code here.\n" +
-                "# Remove this if you want to commit generated sources.\n" +
-                "generated/\n" +
-                "\n" +
-                "# Contains configuration values used during development time.\n" +
-                "# See https://ballerina.io/learn/provide-values-to-configurable-variables/ for more details.\n" +
-                "Config.toml\n";
+        String expectedGitignoreContent = """
+                # Ballerina generates this directory during the compilation of a package.
+                # It contains compiler-generated artifacts and the final executable if this is an application package.
+                target/
+
+                # Ballerina maintains the compiler-generated source code here.
+                # Remove this if you want to commit generated sources.
+                generated/
+
+                # Contains configuration values used during development time.
+                # See https://ballerina.io/learn/provide-values-to-configurable-variables/ for more details.
+                Config.toml
+                """;
         Assert.assertEquals(gitignoreContent.trim(), expectedGitignoreContent.trim());
         Assert.assertTrue(readOutput().contains("Created new package"));
 
@@ -217,7 +223,7 @@ public class NewCommandTest extends BaseCommandTest {
 
         Assert.assertTrue(Files.exists(packageDir));
         Assert.assertTrue(Files.exists(packageDir.resolve(ProjectConstants.BALLERINA_TOML)));
-        String name = Paths.get(args[0]).getFileName().toString();
+        String name = Path.of(args[0]).getFileName().toString();
         String tomlContent = Files.readString(
                 packageDir.resolve(ProjectConstants.BALLERINA_TOML), StandardCharsets.UTF_8);
         String expectedContent = "[package]\n" +
@@ -234,17 +240,19 @@ public class NewCommandTest extends BaseCommandTest {
         Assert.assertTrue(Files.exists(packageDir.resolve(ProjectConstants.GITIGNORE_FILE_NAME)));
         String gitignoreContent = Files.readString(
                 packageDir.resolve(ProjectConstants.GITIGNORE_FILE_NAME), StandardCharsets.UTF_8);
-        String expectedGitignoreContent = "# Ballerina generates this directory during the compilation of a package. " +
-                "\n# It contains compiler-generated artifacts and the final executable if this is an application " +
-                "package.\ntarget/\n" +
-                "\n" +
-                "# Ballerina maintains the compiler-generated source code here.\n" +
-                "# Remove this if you want to commit generated sources.\n" +
-                "generated/\n" +
-                "\n" +
-                "# Contains configuration values used during development time.\n" +
-                "# See https://ballerina.io/learn/provide-values-to-configurable-variables/ for more details.\n" +
-                "Config.toml\n";
+        String expectedGitignoreContent = """
+                # Ballerina generates this directory during the compilation of a package.
+                # It contains compiler-generated artifacts and the final executable if this is an application package.
+                target/
+
+                # Ballerina maintains the compiler-generated source code here.
+                # Remove this if you want to commit generated sources.
+                generated/
+
+                # Contains configuration values used during development time.
+                # See https://ballerina.io/learn/provide-values-to-configurable-variables/ for more details.
+                Config.toml
+                """;
         Assert.assertEquals(gitignoreContent.trim(), expectedGitignoreContent.trim());
         Assert.assertTrue(readOutput().contains("Created new package"));
 
@@ -311,7 +319,7 @@ public class NewCommandTest extends BaseCommandTest {
 
         Assert.assertTrue(Files.exists(tempPackageDir));
         Assert.assertTrue(Files.exists(tempPackageDir.resolve(ProjectConstants.BALLERINA_TOML)));
-        String name = Paths.get(args[0]).getFileName().toString();
+        String name = Path.of(args[0]).getFileName().toString();
         String tomlContent = Files.readString(
                 tempPackageDir.resolve(ProjectConstants.BALLERINA_TOML), StandardCharsets.UTF_8);
         String expectedContent = "[package]\n" +
@@ -374,17 +382,19 @@ public class NewCommandTest extends BaseCommandTest {
         Assert.assertTrue(Files.exists(packageDir.resolve(ProjectConstants.GITIGNORE_FILE_NAME)));
         String gitignoreContent = Files.readString(
                 packageDir.resolve(ProjectConstants.GITIGNORE_FILE_NAME), StandardCharsets.UTF_8);
-        String expectedGitignoreContent = "# Ballerina generates this directory during the compilation of a package. " +
-                "\n# It contains compiler-generated artifacts and the final executable if this is an application " +
-                "package.\ntarget/\n" +
-                "\n" +
-                "# Ballerina maintains the compiler-generated source code here.\n" +
-                "# Remove this if you want to commit generated sources.\n" +
-                "generated/\n" +
-                "\n" +
-                "# Contains configuration values used during development time.\n" +
-                "# See https://ballerina.io/learn/provide-values-to-configurable-variables/ for more details.\n" +
-                "Config.toml\n";
+        String expectedGitignoreContent = """
+                # Ballerina generates this directory during the compilation of a package.
+                # It contains compiler-generated artifacts and the final executable if this is an application package.
+                target/
+
+                # Ballerina maintains the compiler-generated source code here.
+                # Remove this if you want to commit generated sources.
+                generated/
+
+                # Contains configuration values used during development time.
+                # See https://ballerina.io/learn/provide-values-to-configurable-variables/ for more details.
+                Config.toml
+                """;
         Assert.assertEquals(gitignoreContent.trim(), expectedGitignoreContent.trim());
         Assert.assertTrue(readOutput().contains("Created new package"));
 
@@ -403,7 +413,7 @@ public class NewCommandTest extends BaseCommandTest {
             packagePath = ".\\relative_project_name";
         }
         String[] args = {packagePath};
-        Path packageDir = Paths.get(packagePath);
+        Path packageDir = Path.of(packagePath);
         NewCommand newCommand = new NewCommand(printStream, false);
         new CommandLine(newCommand).parseArgs(args);
         newCommand.execute();
@@ -412,11 +422,11 @@ public class NewCommandTest extends BaseCommandTest {
         // - Ballerina.toml
         // - main.bal
 
-        Path currentDir = Paths.get(System.getProperty(ProjectConstants.USER_DIR));
-        Path relativeToCurrentDir = Paths.get(currentDir.toString(), packagePath).normalize();
+        Path currentDir = Path.of(System.getProperty(ProjectConstants.USER_DIR));
+        Path relativeToCurrentDir = Path.of(currentDir.toString(), packagePath).normalize();
         Assert.assertTrue(Files.exists(relativeToCurrentDir));
         Assert.assertTrue(Files.exists(relativeToCurrentDir.resolve(ProjectConstants.BALLERINA_TOML)));
-        String name = Paths.get(args[0]).getFileName().toString();
+        String name = Path.of(args[0]).getFileName().toString();
         String tomlContent = Files.readString(
                 relativeToCurrentDir.resolve(ProjectConstants.BALLERINA_TOML), StandardCharsets.UTF_8);
         String expectedContent = "[package]\n" +
@@ -433,17 +443,19 @@ public class NewCommandTest extends BaseCommandTest {
         Assert.assertTrue(Files.exists(relativeToCurrentDir.resolve(ProjectConstants.GITIGNORE_FILE_NAME)));
         String gitignoreContent = Files.readString(
                 relativeToCurrentDir.resolve(ProjectConstants.GITIGNORE_FILE_NAME), StandardCharsets.UTF_8);
-        String expectedGitignoreContent = "# Ballerina generates this directory during the compilation of a package. " +
-                "\n# It contains compiler-generated artifacts and the final executable if this is an application " +
-                "package.\ntarget/\n" +
-                "\n" +
-                "# Ballerina maintains the compiler-generated source code here.\n" +
-                "# Remove this if you want to commit generated sources.\n" +
-                "generated/\n" +
-                "\n" +
-                "# Contains configuration values used during development time.\n" +
-                "# See https://ballerina.io/learn/provide-values-to-configurable-variables/ for more details.\n" +
-                "Config.toml\n";
+        String expectedGitignoreContent = """
+                # Ballerina generates this directory during the compilation of a package.
+                # It contains compiler-generated artifacts and the final executable if this is an application package.
+                target/
+
+                # Ballerina maintains the compiler-generated source code here.
+                # Remove this if you want to commit generated sources.
+                generated/
+
+                # Contains configuration values used during development time.
+                # See https://ballerina.io/learn/provide-values-to-configurable-variables/ for more details.
+                Config.toml
+                """;
         Assert.assertEquals(gitignoreContent.trim(), expectedGitignoreContent.trim());
         Assert.assertTrue(readOutput().contains("Created new package"));
 
@@ -470,7 +482,7 @@ public class NewCommandTest extends BaseCommandTest {
 
         Assert.assertTrue(Files.exists(packageDir));
         Assert.assertTrue(Files.exists(packageDir.resolve(ProjectConstants.BALLERINA_TOML)));
-        String packageName = Paths.get(args[0]).getFileName().toString();
+        String packageName = Path.of(args[0]).getFileName().toString();
         String tomlContent = Files.readString(
                 packageDir.resolve(ProjectConstants.BALLERINA_TOML), StandardCharsets.UTF_8);
         String expectedContent = "[package]\n" +
@@ -513,8 +525,10 @@ public class NewCommandTest extends BaseCommandTest {
         Assert.assertTrue(Files.exists(packageDir.resolve(ProjectConstants.BALLERINA_TOML)));
         String tomlContent = Files.readString(
                 packageDir.resolve(ProjectConstants.BALLERINA_TOML), StandardCharsets.UTF_8);
-        String expectedContent = "[build-options]\n" +
-                "observabilityIncluded = true\n";
+        String expectedContent = """
+                [build-options]
+                observabilityIncluded = true
+                """;
         Assert.assertTrue(tomlContent.contains(expectedContent));
 
         Assert.assertTrue(Files.exists(packageDir.resolve("service.bal")));
@@ -552,7 +566,7 @@ public class NewCommandTest extends BaseCommandTest {
         String tomlContent = Files.readString(
                 packageDir.resolve(ProjectConstants.BALLERINA_TOML), StandardCharsets.UTF_8);
 
-        String packageName = Paths.get(args[0]).getFileName().toString();
+        String packageName = Path.of(args[0]).getFileName().toString();
         String expectedTomlContent = "[package]\n" +
                 "org = \"" + System.getProperty("user.name").replaceAll("[^a-zA-Z0-9_]", "_") + "\"\n" +
                 "name = \"" + packageName + "\"\n" +
@@ -563,7 +577,6 @@ public class NewCommandTest extends BaseCommandTest {
         Assert.assertTrue(Files.exists(packageDir.resolve(ProjectConstants.PACKAGE_MD_FILE_NAME)));
         Assert.assertTrue(Files.exists(packageDir.resolve(packageName + ".bal")));
         Assert.assertTrue(Files.exists(packageDir.resolve(ProjectConstants.TEST_DIR_NAME)));
-        Assert.assertTrue(Files.exists(packageDir.resolve(ProjectConstants.RESOURCE_DIR_NAME)));
 
         Assert.assertTrue(readOutput().contains("Created new package"));
     }
@@ -587,7 +600,7 @@ public class NewCommandTest extends BaseCommandTest {
         Assert.assertTrue(Files.exists(packageDir));
         Assert.assertTrue(Files.isDirectory(packageDir));
         Assert.assertTrue(Files.exists(packageDir.resolve(ProjectConstants.BALLERINA_TOML)));
-        String packageName = Paths.get(args[0]).getFileName().toString();
+        String packageName = Path.of(args[0]).getFileName().toString();
         String tomlContent = Files.readString(
                 packageDir.resolve(ProjectConstants.BALLERINA_TOML), StandardCharsets.UTF_8);
         String expectedContent = "[package]\n" +
@@ -622,7 +635,7 @@ public class NewCommandTest extends BaseCommandTest {
             errStream.println(e.getDetailedMessages().toString());
         }
         String buildLog = readOutput(true);
-        Assert.assertEquals(buildLog.replaceAll("\r", ""), getOutput("build-tool-template.txt"));
+        Assert.assertEquals(buildLog.replace("\r", ""), getOutput("build-tool-template.txt"));
         Assert.assertTrue(packageDir.resolve("target").resolve("bin").resolve("tool_sample.jar")
                 .toFile().exists());
 
@@ -637,7 +650,7 @@ public class NewCommandTest extends BaseCommandTest {
         packCommand.execute();
         String packBuildLog = readOutput(true);
 
-        Assert.assertEquals(packBuildLog.replaceAll("\r", ""), getOutput("pack-tool-template.txt"));
+        Assert.assertEquals(packBuildLog.replace("\r", ""), getOutput("pack-tool-template.txt"));
         Assert.assertTrue(
                 packageDir.resolve("target").resolve("bala")
                         .resolve("testuserorg-tool_sample-java17-0.1.0.bala").toFile().exists());
@@ -654,7 +667,7 @@ public class NewCommandTest extends BaseCommandTest {
         Assert.assertTrue(Files.exists(packageDir));
         Assert.assertTrue(Files.exists(packageDir.resolve(ProjectConstants.BALLERINA_TOML)));
         Assert.assertTrue(Files.exists(packageDir.resolve("main.bal")));
-        String buildOutput = readOutput().replaceAll("\r", "");
+        String buildOutput = readOutput().replace("\r", "");
         Assert.assertEquals(buildOutput, "Package name is derived as '" + derivedPkgName + "'. " +
                 "Edit the Ballerina.toml to change it.\n\n" +
                 "Created new package '" + derivedPkgName + "' at " + packageDir + ".\n");
@@ -726,7 +739,7 @@ public class NewCommandTest extends BaseCommandTest {
         new CommandLine(packCommand).parseArgs();
         packCommand.execute();
         String packBuildLog = readOutput(true);
-        Assert.assertEquals(packBuildLog.replaceAll("\r", ""), getOutput("pack-central-tool.txt"));
+        Assert.assertEquals(packBuildLog.replace("\r", ""), getOutput("pack-central-tool.txt"));
         Assert.assertTrue(
                 packageDir.resolve("target").resolve("bala")
                         .resolve("testorg-sample_tool_template-java17-1.0.0.bala").toFile().exists());
@@ -743,24 +756,27 @@ public class NewCommandTest extends BaseCommandTest {
         newCommand.execute();
         Assert.assertTrue(Files.exists(packageDir));
         Assert.assertTrue(Files.exists(packageDir.resolve(ProjectConstants.BALLERINA_TOML)));
-        String expectedTomlContent = "[package]\n" +
-                "org = \"testorg\"\n" +
-                "name = \"sample_provided_template\"\n" +
-                "version = \"1.0.0\"\n" +
-                "export = [\"sample_provided_template\"]\n" +
-                "distribution = \"2201.9.0-SNAPSHOT\"\n" +
-                "\n" +
-                "[build-options]\n" +
-                "observabilityIncluded = true\n" +
-                "\n" +
-                "[[platform.java17.dependency]]\n" +
-                "artifactId = \"project1\"\n" +
-                "groupId = \"com.example\"\n" +
-                "version = \"1.0\"\n" +
-                "scope = \"provided\"\n";
+        String expectedTomlContent = """
+                [package]
+                org = "testorg"
+                name = "sample_provided_template"
+                version = "1.0.0"
+                export = ["sample_provided_template"]
+                distribution = "2201.9.0-SNAPSHOT"
+
+                [build-options]
+                observabilityIncluded = true
+
+                [[platform.java17.dependency]]
+                artifactId = "project1"
+                groupId = "com.example"
+                version = "1.0"
+                scope = "provided"
+                """;
         Assert.assertEquals(
                 readFileAsString(packageDir.resolve(ProjectConstants.BALLERINA_TOML)), expectedTomlContent);
-        Assert.assertTrue(readOutput().contains("WARNING: path for the platform dependency project1 with provided " +
+        Assert.assertTrue(readOutput().replace("\r", "").contains(
+                "WARNING: path for the platform dependency project1 with provided " +
                 "scope should be specified in the Ballerina.toml\n" +
                 "Created new package 'sample_provided_template'"));
     }
@@ -778,14 +794,17 @@ public class NewCommandTest extends BaseCommandTest {
         Assert.assertTrue(Files.exists(packageDir));
 
         Assert.assertTrue(Files.exists(packageDir.resolve(ProjectConstants.BALLERINA_TOML)));
-        String expectedTomlContent = "[package]\n" +
-                "org = \"admin\"\n" +
-                "name = \"sample_pull_local\"\n" +
-                "version = \"0.1.5\"\n" +
-                "export = [\"sample_pull_local\"]\n" +
-                "distribution = \"slbeta4\"\n" +
-                "\n[build-options]\n" +
-                "observabilityIncluded = true\n";
+        String expectedTomlContent = """
+                [package]
+                org = "admin"
+                name = "sample_pull_local"
+                version = "0.1.5"
+                export = ["sample_pull_local"]
+                distribution = "slbeta4"
+
+                [build-options]
+                observabilityIncluded = true
+                """;
         Assert.assertEquals(
                 readFileAsString(packageDir.resolve(ProjectConstants.BALLERINA_TOML)), expectedTomlContent);
 
@@ -808,14 +827,17 @@ public class NewCommandTest extends BaseCommandTest {
         Assert.assertTrue(Files.exists(packageDir));
 
         Assert.assertTrue(Files.exists(packageDir.resolve(ProjectConstants.BALLERINA_TOML)));
-        String expectedTomlContent = "[package]\n" +
-                "org = \"parkavik\"\n" +
-                "name = \"sample_pull_WO_Module_Version\"\n" +
-                "version = \"1.0.1\"\n" +
-                "export = [\"sample_pull_WO_Module_Version\"]\n" +
-                "distribution = \"slbeta4\"\n" +
-                "\n[build-options]\n" +
-                "observabilityIncluded = true\n";
+        String expectedTomlContent = """
+                [package]
+                org = "parkavik"
+                name = "sample_pull_WO_Module_Version"
+                version = "1.0.1"
+                export = ["sample_pull_WO_Module_Version"]
+                distribution = "slbeta4"
+
+                [build-options]
+                observabilityIncluded = true
+                """;
         Assert.assertEquals(
                 readFileAsString(packageDir.resolve(ProjectConstants.BALLERINA_TOML)), expectedTomlContent);
         Assert.assertTrue(Files.exists(packageDir.resolve(ProjectConstants.PACKAGE_MD_FILE_NAME)));
@@ -837,14 +859,17 @@ public class NewCommandTest extends BaseCommandTest {
         Assert.assertTrue(Files.exists(packageDir));
 
         Assert.assertTrue(Files.exists(packageDir.resolve(ProjectConstants.BALLERINA_TOML)));
-        String expectedTomlContent = "[package]\n" +
-                "org = \"parkavik\"\n" +
-                "name = \"sample_pull\"\n" +
-                "version = \"1.0.0\"\n" +
-                "export = [\"sample_pull\"]\n" +
-                "distribution = \"slbeta4\"\n" +
-                "\n[build-options]\n" +
-                "observabilityIncluded = true\n";
+        String expectedTomlContent = """
+                [package]
+                org = "parkavik"
+                name = "sample_pull"
+                version = "1.0.0"
+                export = ["sample_pull"]
+                distribution = "slbeta4"
+
+                [build-options]
+                observabilityIncluded = true
+                """;
         Assert.assertEquals(
                 readFileAsString(packageDir.resolve(ProjectConstants.BALLERINA_TOML)), expectedTomlContent);
         Assert.assertTrue(Files.exists(packageDir.resolve(ProjectConstants.PACKAGE_MD_FILE_NAME)));
@@ -854,6 +879,9 @@ public class NewCommandTest extends BaseCommandTest {
 
     @Test(description = "Test pulling a central template and replacing the template name in module imports")
     public void testNewCommandCentralTemplateReplaceImports() throws IOException {
+        if (isWindows()) {
+            throw new SkipException("Not working on Windows");
+        }
         String templateArg = "testorg/centralSample:1.0.2";
         String packageName = "central_sample";
         Path packageDir = tmpDir.resolve(packageName);
@@ -965,16 +993,18 @@ public class NewCommandTest extends BaseCommandTest {
         String tomlContent = Files.readString(
                 packageDir.resolve(ProjectConstants.BALLERINA_TOML), StandardCharsets.UTF_8);
 
-        String expectedTomlPkgContent = "[package]\n" +
-                "org = \"admin\"\n" +
-                "name = \"sample_pull_libs\"\n" +
-                "version = \"0.1.0\"\n" +
-                "export = [\"sample_pull_libs\"]\n" +
-                "distribution = \"slbeta4\"\n";
-        String expectedTomlLibContent =
-                "artifactId = \"snakeyaml\"\n" +
-                "groupId = \"org.yaml\"\n" +
-                "version = \"2.0\"";
+        String expectedTomlPkgContent = """
+                [package]
+                org = "admin"
+                name = "sample_pull_libs"
+                version = "0.1.0"
+                export = ["sample_pull_libs"]
+                distribution = "slbeta4"
+                """;
+        String expectedTomlLibContent = """
+                artifactId = "snakeyaml"
+                groupId = "org.yaml"
+                version = "2.0\"""";
 
         Assert.assertTrue(tomlContent.contains(expectedTomlPkgContent));
         Assert.assertTrue(tomlContent.contains(expectedTomlLibContent));
@@ -1013,10 +1043,11 @@ public class NewCommandTest extends BaseCommandTest {
         Assert.assertTrue(Files.exists(packageDir.resolve(ProjectConstants.BALLERINA_TOML)));
         String depsTomlContent = Files.readString(
                 packageDir.resolve(ProjectConstants.DEPENDENCIES_TOML), StandardCharsets.UTF_8);
-        Assert.assertTrue(depsTomlContent.contains("[[package]]\n" +
-                "org = \"pramodya\"\n" +
-                "name = \"winery\"\n" +
-                "version = \"0.1.0\""));
+        Assert.assertTrue(depsTomlContent.contains("""
+                [[package]]
+                org = "pramodya"
+                name = "winery"
+                version = "0.1.0\""""));
     }
     @Test(description = "Test new command by pulling a central template that has simple include patterns")
     public void testNewCommandTemplateWithSimpleIncludePatterns() throws IOException {
@@ -1140,7 +1171,7 @@ public class NewCommandTest extends BaseCommandTest {
         // Test if no arguments was passed in
         String[] args = {};
         NewCommand newCommand = new NewCommand(printStream, false);
-        new CommandLine(newCommand).parse(args);
+        new CommandLine(newCommand).parseArgs(args);
         newCommand.execute();
 
         Assert.assertTrue(readOutput().contains("project path is not provided"));
@@ -1153,7 +1184,7 @@ public class NewCommandTest extends BaseCommandTest {
         Path packageDir2 = tmpDir.resolve("sample3");
         String[] args = {packageDir1.toString(), packageDir2.toString()};
         NewCommand newCommand = new NewCommand(printStream, false);
-        new CommandLine(newCommand).parse(args);
+        new CommandLine(newCommand).parseArgs(args);
         newCommand.execute();
 
         Assert.assertTrue(readOutput().contains("too many arguments"));
@@ -1165,7 +1196,7 @@ public class NewCommandTest extends BaseCommandTest {
         Path packageDir = tmpDir.resolve("sample2");
         String[] args = {packageDir.toString(), "--help"};
         NewCommand newCommand = new NewCommand(printStream, false);
-        new CommandLine(newCommand).parse(args);
+        new CommandLine(newCommand).parseArgs(args);
         newCommand.execute();
 
         Assert.assertTrue(readOutput().contains("ballerina-new - Create a new Ballerina package"));
@@ -1176,7 +1207,7 @@ public class NewCommandTest extends BaseCommandTest {
         // Test if no arguments was passed in
         String[] args = {"-h"};
         NewCommand newCommand = new NewCommand(printStream, false);
-        new CommandLine(newCommand).parse(args);
+        new CommandLine(newCommand).parseArgs(args);
         newCommand.execute();
 
         Assert.assertTrue(readOutput().contains("ballerina-new - Create a new Ballerina package"));
@@ -1188,7 +1219,7 @@ public class NewCommandTest extends BaseCommandTest {
         Path parentDir = tmpDir.resolve("parent");
         String[] args = {parentDir.toString()};
         NewCommand newCommand = new NewCommand(printStream, false);
-        new CommandLine(newCommand).parse(args);
+        new CommandLine(newCommand).parseArgs(args);
         newCommand.execute();
         readOutput(true);
 
@@ -1197,7 +1228,7 @@ public class NewCommandTest extends BaseCommandTest {
         Path subDir = parentDir.resolve("subdir");
         String[] args2 = {subDir.toString()};
         newCommand = new NewCommand(printStream, false);
-        new CommandLine(newCommand).parse(args2);
+        new CommandLine(newCommand).parseArgs(args2);
         newCommand.execute();
 
         Assert.assertFalse(readOutput().contains("directory is already a ballerina project."));
@@ -1211,7 +1242,7 @@ public class NewCommandTest extends BaseCommandTest {
         Files.createDirectory(parentPath);
         String[] args = {parentPath.resolve("sample").toString()};
         NewCommand newCommand = new NewCommand(printStream, false);
-        new CommandLine(newCommand).parse(args);
+        new CommandLine(newCommand).parseArgs(args);
         newCommand.execute();
 
         Assert.assertFalse(readOutput().contains("directory is already within a ballerina project."));
@@ -1230,7 +1261,7 @@ public class NewCommandTest extends BaseCommandTest {
         Path packageDir = tmpDir.resolve(longPkgName);
         String[] args = {packageDir.toString()};
         NewCommand newCommand = new NewCommand(printStream, false);
-        new CommandLine(newCommand).parse(args);
+        new CommandLine(newCommand).parseArgs(args);
         newCommand.execute();
 
         Assert.assertTrue(readOutput().contains("invalid package name : '" + longPkgName + "' :\n"
@@ -1257,7 +1288,7 @@ public class NewCommandTest extends BaseCommandTest {
         String buildLog = readOutput();
         String outLog = getOutput(outputLog);
         String replacedOutLog = outLog.replace(packageName, args[0]);
-        Assert.assertEquals(buildLog.replaceAll("\r", ""), replacedOutLog);
+        Assert.assertEquals(buildLog.replace("\r", ""), replacedOutLog);
     }
 
     @DataProvider(name = "PackageNameHasOnlyNonAlphanumeric")
@@ -1279,16 +1310,16 @@ public class NewCommandTest extends BaseCommandTest {
         Assert.assertTrue(Files.exists(packageDir));
         Assert.assertTrue(Files.exists(packageDir.resolve(ProjectConstants.BALLERINA_TOML)));
         Assert.assertTrue(Files.exists(packageDir.resolve("main.bal")));
-        String buildOutput = readOutput().replaceAll("\r", "");
+        String buildOutput = readOutput().replace("\r", "");
         Assert.assertEquals(buildOutput, "Package name is derived as '" + derivedPkgName + "'. " +
                 "Edit the Ballerina.toml to change it.\n\n" +
                 "Created new package '" + derivedPkgName + "' at " + packageDir + ".\n");
     }
 
     static class Copy extends SimpleFileVisitor<Path> {
-        private Path fromPath;
-        private Path toPath;
-        private StandardCopyOption copyOption;
+        private final Path fromPath;
+        private final Path toPath;
+        private final StandardCopyOption copyOption;
 
 
         public Copy(Path fromPath, Path toPath, StandardCopyOption copyOption) {
