@@ -18,23 +18,34 @@
 
 package io.ballerina.cli.cmd;
 
+import io.ballerina.cli.launcher.BLauncherException;
+import io.ballerina.projects.util.BuildToolUtils;
 import io.ballerina.projects.util.ProjectUtils;
+import org.ballerinalang.test.BCompileUtil;
+import org.mockito.MockedStatic;
+import org.mockito.Mockito;
 import org.testng.Assert;
 import org.testng.annotations.AfterSuite;
 import org.testng.annotations.BeforeClass;
 import org.testng.annotations.BeforeSuite;
 import org.testng.annotations.Test;
+import org.wso2.ballerinalang.util.RepoUtils;
 import picocli.CommandLine;
 
+import java.io.ByteArrayOutputStream;
 import java.io.IOException;
+import java.io.PrintStream;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.util.List;
 import java.util.Objects;
 
 import static io.ballerina.cli.cmd.CommandOutputUtils.getOutput;
+import static io.ballerina.cli.cmd.CommandOutputUtils.replaceDependenciesTomlContent;
+import static io.ballerina.projects.util.ProjectConstants.DIST_CACHE_DIRECTORY;
+import static io.ballerina.projects.util.ProjectConstants.USER_DIR_PROPERTY;
 
 /**
  * Profile command tests.
@@ -44,8 +55,8 @@ import static io.ballerina.cli.cmd.CommandOutputUtils.getOutput;
 public class ProfileCommandTest extends BaseCommandTest {
     private Path testResources;
 
-    static Path logFile = Paths.get(".", "src", "test", "resources", "compiler_plugin_tests",
-            "log_creator_combined_plugin", "compiler-plugin.txt");
+    private static final Path logFile = Path.of("build/logs/log_creator_combined_plugin/compiler-plugin.txt")
+            .toAbsolutePath();
 
     @BeforeSuite
     public void setupSuite() throws IOException {
@@ -53,6 +64,7 @@ public class ProfileCommandTest extends BaseCommandTest {
         Files.writeString(logFile, "");
     }
 
+    @Override
     @BeforeClass
     public void setup() throws IOException {
         super.setup();
@@ -60,7 +72,7 @@ public class ProfileCommandTest extends BaseCommandTest {
             this.testResources = super.tmpDir.resolve("build-test-resources");
             URI testResourcesURI = Objects.requireNonNull(
                     getClass().getClassLoader().getResource("test-resources")).toURI();
-            Path resourceURI = Paths.get(testResourcesURI);
+            Path resourceURI = Path.of(testResourcesURI);
             Files.walkFileTree(resourceURI, new BuildCommandTest.Copy(resourceURI,
                     this.testResources));
         } catch (URISyntaxException e) {
@@ -71,17 +83,17 @@ public class ProfileCommandTest extends BaseCommandTest {
 
     @Test(description = "Profile a ballerina project")
     public void testRunBalProjectWithProfileFlag() throws IOException {
-        Path projectPath = this.testResources.resolve("projectForProfile").resolve("package_a");
-        System.setProperty("user.dir", projectPath.toString());
+        Path projectPath = this.testResources.resolve("projectForProfile/package_a");
+        System.setProperty(USER_DIR_PROPERTY, projectPath.toString());
 
-        java.io.ByteArrayOutputStream out = new java.io.ByteArrayOutputStream();
-        System.setOut(new java.io.PrintStream(out));
+        ByteArrayOutputStream out = new ByteArrayOutputStream();
+        System.setOut(new PrintStream(out));
 
         ProfileCommand profileCommand = new ProfileCommand(projectPath, printStream, false);
         profileCommand.execute();
-        String buildLog = readOutput(true).replaceAll("\r", "").strip();
+        String buildLog = readOutput(true).replaceAll("\r", "").replaceAll("\\\\", "/").strip();
         Assert.assertEquals(buildLog, getOutput("run-project-with-profile.txt"));
-        Path htmlPath = projectPath.resolve("target").resolve("profiler").resolve("ProfilerReport.html");
+        Path htmlPath = projectPath.resolve("target/profiler/ProfilerReport.html");
         Assert.assertTrue(htmlPath.toFile().exists());
         try {
             String htmlContent = Files.readString(htmlPath);
@@ -95,17 +107,17 @@ public class ProfileCommandTest extends BaseCommandTest {
 
     @Test(description = "Profile a ballerina project with build tools")
     public void testRunBalProjectWithProfileFlagWithBuildTools() throws IOException {
-        Path projectPath = this.testResources.resolve("projectForProfile").resolve("package_b");
-        System.setProperty("user.dir", projectPath.toString());
+        Path projectPath = this.testResources.resolve("projectForProfile/package_b");
+        System.setProperty(USER_DIR_PROPERTY, projectPath.toString());
 
-        java.io.ByteArrayOutputStream out = new java.io.ByteArrayOutputStream();
-        System.setOut(new java.io.PrintStream(out));
+        ByteArrayOutputStream out = new ByteArrayOutputStream();
+        System.setOut(new PrintStream(out));
 
         ProfileCommand profileCommand = new ProfileCommand(projectPath, printStream, false);
         profileCommand.execute();
-        String buildLog = readOutput(true).replaceAll("\r", "").strip();
+        String buildLog = readOutput(true).replaceAll("\r", "").replaceAll("\\\\", "/").strip();
         Assert.assertEquals(buildLog, getOutput("profile-project-with-build-tool.txt"));
-        Path htmlPath = projectPath.resolve("target").resolve("profiler").resolve("ProfilerReport.html");
+        Path htmlPath = projectPath.resolve("target/profiler/ProfilerReport.html");
         Assert.assertTrue(htmlPath.toFile().exists());
         try {
             String htmlContent = Files.readString(htmlPath);
@@ -120,13 +132,50 @@ public class ProfileCommandTest extends BaseCommandTest {
     @Test(description = "Test profile command with help")
     public void testProfileCommandAndHelp() throws IOException {
         String[] args = {"--help"};
-        Path projectPath = this.testResources.resolve("projectForProfile").resolve("package_a");
-        System.setProperty("user.dir", projectPath.toString());
+        Path projectPath = this.testResources.resolve("projectForProfile/package_a");
+        System.setProperty(USER_DIR_PROPERTY, projectPath.toString());
         ProfileCommand profileCommand = new ProfileCommand(projectPath, printStream, false);
         new CommandLine(profileCommand).parseArgs(args);
         profileCommand.execute();
         Assert.assertTrue(readOutput().contains("ballerina-profile - Run Ballerina Profiler on the source and " +
                 "generate flame graph"));
+    }
+
+    @Test(description = "Profile an empty package")
+    public void testProfileEmptyProject() throws IOException {
+        Path projectPath = this.testResources.resolve("emptyPackage");
+        System.setProperty(USER_DIR_PROPERTY, projectPath.toString());
+
+        ProfileCommand profileCommand = new ProfileCommand(projectPath, printStream, false);
+        new CommandLine(profileCommand).parseArgs();
+        try {
+            profileCommand.execute();
+        } catch (BLauncherException e) {
+            List<String> messages = e.getMessages();
+            Assert.assertEquals(messages.size(), 1);
+            Assert.assertEquals(messages.get(0), getOutput("build-empty-package.txt"));
+        }
+    }
+
+    @Test(description = "Profile an empty package with code generator build tools")
+    public void testProfileEmptyProjectWithBuildTools() throws IOException {
+        Path testDistCacheDirectory = Path.of("build").toAbsolutePath().resolve(DIST_CACHE_DIRECTORY);
+        BCompileUtil.compileAndCacheBala(
+                testResources.resolve("buildToolResources/tools/ballerina-generate-file").toString());
+        Path projectPath = this.testResources.resolve("emptyProjectWithBuildTool");
+        replaceDependenciesTomlContent(projectPath, "**INSERT_DISTRIBUTION_VERSION_HERE**",
+                RepoUtils.getBallerinaShortVersion());
+        System.setProperty(USER_DIR_PROPERTY, projectPath.toString());
+        try (MockedStatic<BuildToolUtils> repoUtils = Mockito.mockStatic(
+                BuildToolUtils.class, Mockito.CALLS_REAL_METHODS)) {
+            repoUtils.when(BuildToolUtils::getCentralBalaDirPath).thenReturn(testDistCacheDirectory.resolve("bala"));
+            ProfileCommand profileCommand = new ProfileCommand(projectPath, printStream, false);
+            new CommandLine(profileCommand).parseArgs();
+            profileCommand.execute();
+        }
+        String buildLog = readOutput(true);
+        Assert.assertEquals(buildLog.replaceAll("\r", "").replace("\\", "/"),
+                getOutput("profile-empty-project-with-build-tools.txt"));
     }
 
     @AfterSuite
