@@ -132,7 +132,6 @@ import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 import static io.ballerina.compiler.api.impl.PositionUtil.isPosWithinOpenCloseLineRanges;
 import static io.ballerina.compiler.api.impl.PositionUtil.isPosWithinRange;
@@ -227,9 +226,7 @@ public class ExpectedTypeFinder extends NodeTransformer<Optional<TypeSymbol>> {
             return Optional.empty();
         }
 
-        if (bLangNode instanceof BLangRecordLiteral.BLangRecordVarNameField) {
-            BLangRecordLiteral.BLangRecordVarNameField bLangNodeRecLiteral =
-                    (BLangRecordLiteral.BLangRecordVarNameField) bLangNode;
+        if (bLangNode instanceof BLangRecordLiteral.BLangRecordVarNameField bLangNodeRecLiteral) {
             if (bLangNodeRecLiteral.symbol != null && node.parent().kind() == SyntaxKind.MAPPING_CONSTRUCTOR) {
                 BLangExpression bLangExpression = bLangNodeRecLiteral.impConversionExpr;
                 if (bLangExpression != null && bLangExpression.getBType().getKind() == TypeKind.ANY) {
@@ -306,11 +303,10 @@ public class ExpectedTypeFinder extends NodeTransformer<Optional<TypeSymbol>> {
         }
 
         BLangNode bLangNode = nodeFinder.lookup(this.bLangCompilationUnit, node.lineRange());
-        if (!(bLangNode instanceof BLangBinaryExpr)) {
+        if (!(bLangNode instanceof BLangBinaryExpr bLangBinaryExpr)) {
             return Optional.empty();
         }
 
-        BLangBinaryExpr bLangBinaryExpr = (BLangBinaryExpr) bLangNode;
         BLangExpression rhs = bLangBinaryExpr.rhsExpr;
         BLangExpression lhs = bLangBinaryExpr.lhsExpr;
         BType rhsExpType = rhs.expectedType;
@@ -330,7 +326,7 @@ public class ExpectedTypeFinder extends NodeTransformer<Optional<TypeSymbol>> {
             return Optional.empty();
         }
 
-        return (bLangInvocation.symbol instanceof BInvokableSymbol && bLangInvocation.getRequiredArgs().size() > 0) ?
+        return (bLangInvocation.symbol instanceof BInvokableSymbol && !bLangInvocation.getRequiredArgs().isEmpty()) ?
                 transformFunctionOrMethod(bLangNode,
                         ((BLangNode) bLangInvocation.getRequiredArgs().get(0)).getBType(),
                         (BInvokableSymbol) bLangInvocation.symbol, node.arguments(),
@@ -367,12 +363,12 @@ public class ExpectedTypeFinder extends NodeTransformer<Optional<TypeSymbol>> {
             return Optional.empty();
         }
 
-        if (bLangNode instanceof BLangSimpleVarRef && ((BLangSimpleVarRef) bLangNode).symbol != null) {
-            return getTypeFromBType(((BLangSimpleVarRef) bLangNode).symbol.getType());
+        if (bLangNode instanceof BLangSimpleVarRef simpleVarRef && ((BLangSimpleVarRef) bLangNode).symbol != null) {
+            return getTypeFromBType(simpleVarRef.symbol.getType());
         }
 
-        if (bLangNode instanceof BLangUserDefinedType && ((BLangUserDefinedType) bLangNode).symbol != null) {
-            return getTypeFromBType(((BLangUserDefinedType) bLangNode).symbol.getType());
+        if (bLangNode instanceof BLangUserDefinedType userDefinedType && userDefinedType.symbol != null) {
+            return getTypeFromBType(userDefinedType.symbol.getType());
         }
 
         return Optional.empty();
@@ -393,14 +389,14 @@ public class ExpectedTypeFinder extends NodeTransformer<Optional<TypeSymbol>> {
     @Override
     public Optional<TypeSymbol> transform(ImplicitAnonymousFunctionExpressionNode node) {
         BLangNode bLangNode = nodeFinder.lookup(this.bLangCompilationUnit, node.lineRange());
-        if (!(bLangNode instanceof BLangArrowFunction)) {
+        if (!(bLangNode instanceof BLangArrowFunction arrowFunction)) {
             return Optional.empty();
         }
 
         if (!node.rightDoubleArrow().isMissing() &&
                 node.rightDoubleArrow().lineRange().endLine().offset() <= linePosition.offset()) {
             // Cursor is at the expression node.
-            BType funcType = ((BLangArrowFunction) bLangNode).funcType;
+            BType funcType = arrowFunction.funcType;
             if (funcType == null) {
                 return Optional.empty();
             }
@@ -444,10 +440,12 @@ public class ExpectedTypeFinder extends NodeTransformer<Optional<TypeSymbol>> {
         return ((FunctionSymbol) functionSymbol.get()).typeDescriptor().returnTypeDescriptor();
     }
 
+    @Override
     public Optional<TypeSymbol> transform(MatchClauseNode node) {
         return node.parent().apply(this);
     }
 
+    @Override
     public Optional<TypeSymbol> transform(MatchStatementNode node) {
         return this.semanticModel.typeOf(node.condition());
     }
@@ -475,7 +473,7 @@ public class ExpectedTypeFinder extends NodeTransformer<Optional<TypeSymbol>> {
                 instanceof BInvokableSymbol)) {
             List<BVarSymbol> params = ((BInvokableSymbol) (((BLangInvocation) ((BLangTypeInit) bLangNode).
                     initInvocation).symbol)).params;
-            if (params.size() == 0) {
+            if (params.isEmpty()) {
                 throw new IllegalStateException();
             }
 
@@ -514,16 +512,14 @@ public class ExpectedTypeFinder extends NodeTransformer<Optional<TypeSymbol>> {
         Token closeParen = parenthesizedArgList.get().closeParenToken();
         // Check if the line position is within the parameter context.
         if (isWithinParenthesis(openParen, closeParen)) {
-            if (!(bLangNode instanceof BLangTypeInit)) {
+            if (!(bLangNode instanceof BLangTypeInit bLangTypeInit)) {
                 return getExpectedType(bLangNode);
             }
 
-            BLangTypeInit bLangTypeInit = (BLangTypeInit) bLangNode;
-            if (!(bLangTypeInit.initInvocation instanceof BLangInvocation)) {
+            if (!(bLangTypeInit.initInvocation instanceof BLangInvocation initInvocation)) {
                 return getExpectedType(bLangNode);
             }
 
-            BLangInvocation initInvocation = (BLangInvocation) bLangTypeInit.initInvocation;
             if (initInvocation.symbol == null) {
                 throw new IllegalStateException();
             }
@@ -562,8 +558,8 @@ public class ExpectedTypeFinder extends NodeTransformer<Optional<TypeSymbol>> {
         }
 
         if (isPosWithinRange(linePosition, node.condition().lineRange()) &&
-                bLangNode instanceof BLangIf) {
-            return getExpectedType(((BLangIf) bLangNode).expr);
+                bLangNode instanceof BLangIf bLangIf) {
+            return getExpectedType(bLangIf.expr);
         }
 
         return Optional.empty();
@@ -577,8 +573,8 @@ public class ExpectedTypeFinder extends NodeTransformer<Optional<TypeSymbol>> {
         }
 
         if (isPosWithinRange(linePosition, node.condition().lineRange())
-                && bLangNode instanceof BLangWhile) {
-            return getExpectedType(((BLangWhile) bLangNode).expr);
+                && bLangNode instanceof BLangWhile bLangWhile) {
+            return getExpectedType(bLangWhile.expr);
         }
 
         return Optional.empty();
@@ -620,7 +616,7 @@ public class ExpectedTypeFinder extends NodeTransformer<Optional<TypeSymbol>> {
             Token openParen = node.openParenToken();
             Token closeParen = node.closeParenToken();
             if (isWithinParenthesis(openParen, closeParen)) {
-                if (bLangActionInvocation.argExprs.size() == 0) {
+                if (bLangActionInvocation.argExprs.isEmpty()) {
                     return getTypeFromBType(((BInvokableSymbol) bLangActionInvocation.symbol).
                             getParameters().get(0).getType());
                 }
@@ -697,11 +693,10 @@ public class ExpectedTypeFinder extends NodeTransformer<Optional<TypeSymbol>> {
     @Override
     public Optional<TypeSymbol> transform(WaitActionNode node) {
         BLangNode bLangNode = nodeFinder.lookup(this.bLangCompilationUnit, node.lineRange());
-        if (!(bLangNode instanceof BLangWaitExpr)) {
+        if (!(bLangNode instanceof BLangWaitExpr waitExpr)) {
             return Optional.empty();
         }
 
-        BLangWaitExpr waitExpr = (BLangWaitExpr) bLangNode;
         for (BLangExpression bLangExpression : waitExpr.exprList) {
             if (isPosWithinRange(linePosition, bLangExpression.getPosition().lineRange())) {
                 return getExpectedType(bLangExpression);
@@ -748,22 +743,21 @@ public class ExpectedTypeFinder extends NodeTransformer<Optional<TypeSymbol>> {
     @Override
     public Optional<TypeSymbol> transform(TableConstructorExpressionNode node) {
         BLangNode bLangNode = nodeFinder.lookup(this.bLangCompilationUnit, node.lineRange());
-        if (!(bLangNode instanceof BLangTableConstructorExpr)) {
+        if (!(bLangNode instanceof BLangTableConstructorExpr bLangTableConstructorExpr)) {
             return Optional.empty();
         }
 
-        BLangTableConstructorExpr bLangTableConstructorExpr = (BLangTableConstructorExpr) bLangNode;
         if (node.keySpecifier().isPresent() &&
                 isWithinParenthesis(node.keySpecifier().get().openParenToken(),
                         node.keySpecifier().get().closeParenToken())) {
             BType expectedType = bLangTableConstructorExpr.expectedType;
-            if (expectedType instanceof BTableType) {
+            if (expectedType instanceof BTableType tableType) {
                 return Optional.of(typesFactory.getTypeDescriptor(Objects.
-                        requireNonNullElse(((BTableType) expectedType).constraint, expectedType)));
+                        requireNonNullElse(tableType.constraint, expectedType)));
             }
 
-            if (expectedType instanceof BTypeReferenceType) {
-                BType referredType = ((BTypeReferenceType) expectedType).referredType;
+            if (expectedType instanceof BTypeReferenceType referenceType) {
+                BType referredType = referenceType.referredType;
                 return Optional.of(typesFactory.getTypeDescriptor(Objects.
                         requireNonNullElse(((BTableType) referredType).constraint, expectedType)));
             }
@@ -795,11 +789,11 @@ public class ExpectedTypeFinder extends NodeTransformer<Optional<TypeSymbol>> {
     @Override
     public Optional<TypeSymbol> transform(SelectClauseNode node) {
         BLangNode bLangNode = nodeFinder.lookup(bLangCompilationUnit, node.lineRange());
-        if (!(bLangNode instanceof BLangSelectClause)) {
+        if (!(bLangNode instanceof BLangSelectClause selectClause)) {
             return Optional.empty();
         }
 
-        BType expectedType = ((BLangExpression) ((BLangSelectClause) bLangNode).getExpression()).expectedType;
+        BType expectedType = ((BLangExpression) selectClause.getExpression()).expectedType;
         return getTypeFromBType(expectedType);
 
     }
@@ -874,10 +868,9 @@ public class ExpectedTypeFinder extends NodeTransformer<Optional<TypeSymbol>> {
         Optional<ParenthesizedArgList> arguments = clientResourceAccessActionNode.arguments();
         if (arguments.isPresent() && isWithinParenthesis(arguments.get().openParenToken(),
                 arguments.get().closeParenToken())) {
-            if (!(bLangNode instanceof BLangInvocation)) {
+            if (!(bLangNode instanceof BLangInvocation bLangInvocation)) {
                 return getExpectedType(bLangNode);
             }
-            BLangInvocation bLangInvocation = (BLangInvocation) bLangNode;
             if (bLangInvocation.symbol == null) {
                 return Optional.empty();
             }
@@ -885,7 +878,7 @@ public class ExpectedTypeFinder extends NodeTransformer<Optional<TypeSymbol>> {
             //`params` contains path params and path rest params as well. We need to skip those
             List<BVarSymbol> params = symbol.params.stream().filter(param ->
                     param.getKind() != SymbolKind.PATH_PARAMETER
-                            && param.getKind() != SymbolKind.PATH_REST_PARAMETER).collect(Collectors.toList());
+                            && param.getKind() != SymbolKind.PATH_REST_PARAMETER).toList();
             BVarSymbol restPram = ((BInvokableSymbol) bLangInvocation.symbol).restParam;
             TypeSymbol restParamMemberType = null;
 
@@ -954,8 +947,8 @@ public class ExpectedTypeFinder extends NodeTransformer<Optional<TypeSymbol>> {
                 bType = ((BLangRecordLiteral) node).expectedType;
                 break;
             case SIMPLE_VARIABLE_REF:
-                if (node instanceof BLangRecordLiteral) {
-                    BLangExpression bLangExpression = ((BLangRecordLiteral) node).impConversionExpr;
+                if (node instanceof BLangRecordLiteral recordLiteral) {
+                    BLangExpression bLangExpression = recordLiteral.impConversionExpr;
                     if (bLangExpression != null && bLangExpression.getBType().getKind() == TypeKind.ANY) {
                         bType = bLangExpression.getBType();
                         break;
@@ -1068,7 +1061,7 @@ public class ExpectedTypeFinder extends NodeTransformer<Optional<TypeSymbol>> {
         Optional<ModuleSymbol> module = searchModuleForAlias(alias);
         return module.map(moduleSymbol -> moduleSymbol.allSymbols().stream()
                         .filter(predicate)
-                        .collect(Collectors.toList()))
+                        .toList())
                 .orElseGet(ArrayList::new);
     }
 
@@ -1235,7 +1228,7 @@ public class ExpectedTypeFinder extends NodeTransformer<Optional<TypeSymbol>> {
                                                            SeparatedNodeList<FunctionArgumentNode> arguments,
                                                            Token openParenToken, Token closeParenToken,
                                                            boolean hasFirstArg) {
-        if (originalInvokable == null || originalInvokable.params.size() == 0) {
+        if (originalInvokable == null || originalInvokable.params.isEmpty()) {
             return getExpectedTypeFromFunction(bLangNode, openParenToken, closeParenToken);
         }
 
