@@ -22,7 +22,6 @@ import io.ballerina.projects.environment.ProjectEnvironment;
 import io.ballerina.projects.internal.DefaultDiagnosticResult;
 import io.ballerina.projects.internal.PackageDiagnostic;
 import io.ballerina.projects.internal.ProjectDiagnosticErrorCode;
-import io.ballerina.projects.internal.jballerina.JarWriter;
 import io.ballerina.projects.internal.model.Target;
 import io.ballerina.projects.util.ProjectConstants;
 import io.ballerina.projects.util.ProjectUtils;
@@ -38,8 +37,8 @@ import org.ballerinalang.maven.Dependency;
 import org.ballerinalang.maven.MavenResolver;
 import org.ballerinalang.maven.Utils;
 import org.ballerinalang.maven.exceptions.MavenResolverException;
-import org.wso2.ballerinalang.compiler.CompiledJarFile;
 import org.wso2.ballerinalang.compiler.bir.codegen.CodeGenerator;
+import org.wso2.ballerinalang.compiler.bir.codegen.CompiledJarFile;
 import org.wso2.ballerinalang.compiler.bir.codegen.interop.InteropValidator;
 import org.wso2.ballerinalang.compiler.tree.BLangPackage;
 import org.wso2.ballerinalang.compiler.util.CompilerContext;
@@ -56,7 +55,6 @@ import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
@@ -73,11 +71,12 @@ import java.util.jar.Attributes;
 import java.util.jar.JarFile;
 import java.util.jar.JarInputStream;
 import java.util.jar.Manifest;
-import java.util.stream.Collectors;
 
 import static io.ballerina.projects.util.FileUtils.getFileNameWithoutExtension;
 import static io.ballerina.projects.util.ProjectConstants.BIN_DIR_NAME;
 import static io.ballerina.projects.util.ProjectConstants.DOT;
+import static io.ballerina.projects.util.ProjectConstants.RESOURCE_DIR_NAME;
+import static io.ballerina.projects.util.ProjectUtils.getConflictingResourcesMsg;
 import static io.ballerina.projects.util.ProjectUtils.getThinJarFileName;
 import static org.wso2.ballerinalang.compiler.bir.codegen.JvmConstants.CLASS_FILE_SUFFIX;
 
@@ -95,6 +94,7 @@ public class JBallerinaBackend extends CompilerBackend {
     private static final String JAR_FILE_NAME_SUFFIX = "";
     private static final HashSet<String> excludeExtensions = new HashSet<>(Lists.of("DSA", "SF"));
     private static final String OS = System.getProperty("os.name").toLowerCase(Locale.getDefault());
+    public static final String JAR_NAME_SEPARATOR = "-";
 
     private final PackageResolution pkgResolution;
     private final JvmTarget jdkVersion;
@@ -108,6 +108,7 @@ public class JBallerinaBackend extends CompilerBackend {
     private DiagnosticResult diagnosticResult;
     private boolean codeGenCompleted;
     private final List<JarConflict> conflictedJars;
+    List<Diagnostic> conflictedResourcesDiagnostics = new ArrayList<>();
 
     public static JBallerinaBackend from(PackageCompilation packageCompilation, JvmTarget jdkVersion) {
         return from(packageCompilation, jdkVersion, true);
@@ -159,6 +160,9 @@ public class JBallerinaBackend extends CompilerBackend {
         // collect compilation diagnostics
         List<Diagnostic> moduleDiagnostics = new ArrayList<>();
         for (ModuleContext moduleContext : pkgResolution.topologicallySortedModuleList()) {
+            if (shrink) {
+                ModuleContext.shrinkDocuments(moduleContext);
+            }
             if (moduleContext.moduleId().packageId().equals(packageContext.packageId())) {
                 if (packageCompilation.diagnosticResult().hasErrors()) {
                     for (Diagnostic diagnostic : moduleContext.diagnostics()) {
@@ -173,21 +177,25 @@ public class JBallerinaBackend extends CompilerBackend {
                 moduleContext.generatePlatformSpecificCode(compilerContext, this);
             }
             for (Diagnostic diagnostic : moduleContext.diagnostics()) {
-                moduleDiagnostics.add(
-                        new PackageDiagnostic(diagnostic, moduleContext.descriptor(), moduleContext.project()));
+                if (this.packageContext.project().buildOptions().showDependencyDiagnostics() ||
+                        !ProjectKind.BALA_PROJECT.equals(moduleContext.project().kind()) ||
+                        (diagnostic.diagnosticInfo().severity() == DiagnosticSeverity.ERROR)) {
+                    moduleDiagnostics.add(
+                            new PackageDiagnostic(diagnostic, moduleContext.descriptor(), moduleContext.project()));
+                }
             }
 
-            if (shrink) {
-                ModuleContext.shrinkDocuments(moduleContext);
-            }
             if (moduleContext.project().kind() == ProjectKind.BALA_PROJECT) {
                 moduleContext.cleanBLangPackage();
             }
         }
+
         // add compilation diagnostics
         diagnostics.addAll(moduleDiagnostics);
         // add plugin diagnostics
         diagnostics.addAll(this.packageContext.getPackageCompilation().pluginDiagnostics());
+        // add conflicting resources diagnostics
+        diagnostics.addAll(conflictedResourcesDiagnostics);
 
         this.diagnosticResult = new DefaultDiagnosticResult(diagnostics);
         codeGenCompleted = true;
@@ -221,21 +229,46 @@ public class JBallerinaBackend extends CompilerBackend {
             default -> throw new RuntimeException("Unexpected output type: " + outputType);
         };
 
-        ArrayList<Diagnostic> allDiagnostics = new ArrayList<>(diagnosticResult.allDiagnostics);
-        // Add lifecycle plugin diagnostics.
-        List<Diagnostic> pluginDiagnostics = packageCompilation.notifyCompilationCompletion(filePath);
-        if (!pluginDiagnostics.isEmpty()) {
-            emitResultDiagnostics.addAll(pluginDiagnostics);
+        return getEmitResult(filePath, generatedArtifact, BalCommand.BUILD, emitResultDiagnostics);
+    }
+
+    public EmitResult emit(TestEmitArgs testEmitArgs) {
+        Path generatedArtifact = null;
+
+        if (diagnosticResult.hasErrors()) {
+            return new EmitResult(false, new DefaultDiagnosticResult(new ArrayList<>()), null);
         }
-        // Add jar resolver diagnostics.
-        emitResultDiagnostics.addAll(jarResolver().diagnosticResult().diagnostics());
-        // JBallerinaBackend diagnostics contains all diagnostics.
-        // EmitResult will only contain diagnostics related to emitting the executable.
-        allDiagnostics.addAll(emitResultDiagnostics);
+
+        if (testEmitArgs.outputType() == OutputType.TEST) {
+            generatedArtifact = emitTestExecutable(testEmitArgs.filePath(), testEmitArgs.jarDependencies(),
+                    testEmitArgs.testSuiteJsonPath(), testEmitArgs.jsonCopyPath(),
+                    testEmitArgs.excludedClasses(), testEmitArgs.classPathTextCopyPath());
+        } else {
+            throw new RuntimeException("Unexpected output type: " + testEmitArgs.outputType());
+        }
+
+        return getEmitResult(testEmitArgs.filePath(), generatedArtifact, BalCommand.TEST, new ArrayList<>());
+    }
+
+    private EmitResult getEmitResult(Path filePath, Path generatedArtifact, BalCommand balCommand,
+                                    List<Diagnostic> emitDiagnostics) {
+        if (filePath != null) {
+            List<Diagnostic> pluginDiagnostics = notifyCompilationCompletion(filePath, balCommand);
+            if (!pluginDiagnostics.isEmpty()) {
+                emitDiagnostics.addAll(pluginDiagnostics);
+            }
+        }
+        List<Diagnostic> allDiagnostics = new ArrayList<>(diagnosticResult.allDiagnostics);
+        emitDiagnostics.addAll(jarResolver().diagnosticResult().diagnostics());
+        allDiagnostics.addAll(emitDiagnostics);
         diagnosticResult = new DefaultDiagnosticResult(allDiagnostics);
 
         // TODO handle the EmitResult properly
-        return new EmitResult(true, new DefaultDiagnosticResult(emitResultDiagnostics), generatedArtifact);
+        return new EmitResult(true, new DefaultDiagnosticResult(emitDiagnostics), generatedArtifact);
+    }
+
+    public List<Diagnostic> notifyCompilationCompletion(Path filePath, BalCommand balCommand) {
+        return packageCompilation.notifyCompilationCompletion(filePath, balCommand);
     }
 
     private Path emitBala(Path filePath) {
@@ -255,7 +288,7 @@ public class JBallerinaBackend extends CompilerBackend {
         return getPlatformLibraries(packageId)
                 .stream()
                 .filter(platformLibrary -> platformLibrary.scope() == scope)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private List<PlatformLibrary> getPlatformLibraries(PackageId packageId) {
@@ -283,7 +316,7 @@ public class JBallerinaBackend extends CompilerBackend {
                     if (Objects.equals(dependencyScope, PlatformLibraryScope.PROVIDED)
                             && !Objects.equals(packageId, this.packageContext().packageId())) {
                         dependencyFilePath = getPlatformLibPathFromProvided(platform, groupId, artifactId, version);
-                        Path jarPath = Paths.get(dependencyFilePath);
+                        Path jarPath = Path.of(dependencyFilePath);
                         if (!jarPath.isAbsolute()) {
                             jarPath = this.packageContext().project().sourceRoot().resolve(jarPath);
                         }
@@ -294,7 +327,7 @@ public class JBallerinaBackend extends CompilerBackend {
                     dependency.put(JarLibrary.KEY_PATH, dependencyFilePath);
                 }
                 // If the path is relative we will convert to absolute relative to Ballerina.toml file
-                Path jarPath = Paths.get(dependencyFilePath);
+                Path jarPath = Path.of(dependencyFilePath);
                 if (!jarPath.isAbsolute()) {
                     jarPath = pkg.project().sourceRoot().resolve(jarPath);
                 }
@@ -317,6 +350,11 @@ public class JBallerinaBackend extends CompilerBackend {
     }
 
     @Override
+    public PlatformLibrary codeGeneratedResourcesLibrary(PackageId packageId) {
+        return codeGeneratedResourcesLibrary(packageId, PlatformLibraryScope.DEFAULT);
+    }
+
+    @Override
     public PlatformLibrary runtimeLibrary() {
         return new JarLibrary(ProjectUtils.getBallerinaRTJarPath(), PlatformLibraryScope.DEFAULT);
     }
@@ -336,15 +374,16 @@ public class JBallerinaBackend extends CompilerBackend {
         }
         boolean isRemoteMgtEnabled = moduleContext.project().buildOptions().compilationOptions().remoteManagement();
         CompiledJarFile compiledJarFile = jvmCodeGenerator.generate(bLangPackage, isRemoteMgtEnabled);
-        if (compiledJarFile == null) {
-            throw new IllegalStateException("Missing generated jar, module: " + moduleContext.moduleName());
-        }
         String jarFileName = getJarFileName(moduleContext) + JAR_FILE_NAME_SUFFIX;
         try {
-            ByteArrayOutputStream byteStream = JarWriter.write(compiledJarFile, getResources(moduleContext));
+            ByteArrayOutputStream byteStream = compiledJarFile.toByteArrayStream();
             compilationCache.cachePlatformSpecificLibrary(this, jarFileName, byteStream);
         } catch (IOException e) {
             throw new ProjectException("Failed to cache generated jar, module: " + moduleContext.moduleName());
+        }
+        if (moduleContext.project().currentPackage().packageContext() == packageContext &&
+                moduleContext.isDefaultModule()) {
+            cacheResources(compilationCache, moduleContext.project().buildOptions().skipTests());
         }
         // skip generation of the test jar if --with-tests option is not provided
         if (moduleContext.project().buildOptions().skipTests()) {
@@ -359,7 +398,7 @@ public class JBallerinaBackend extends CompilerBackend {
         CompiledJarFile compiledTestJarFile = jvmCodeGenerator.generateTestModule(bLangPackage.testablePkgs.get(0),
                 isRemoteMgtEnabled);
         try {
-            ByteArrayOutputStream byteStream = JarWriter.write(compiledTestJarFile, getAllResources(moduleContext));
+            ByteArrayOutputStream byteStream = compiledTestJarFile.toByteArrayStream();
             compilationCache.cachePlatformSpecificLibrary(this, testJarFileName, byteStream);
         } catch (IOException e) {
             throw new ProjectException("Failed to cache generated test jar, module: " + moduleContext.moduleName());
@@ -410,23 +449,75 @@ public class JBallerinaBackend extends CompilerBackend {
             writeManifest(manifest, outStream);
 
             // Sort jar libraries list to avoid inconsistent jar reporting
-            List<JarLibrary> sortedJarLibraries = jarLibraries.stream()
-                    .sorted(Comparator.comparing(jarLibrary -> jarLibrary.path().getFileName())).toList();
-
-            // Copy all the jars
-            for (JarLibrary library : sortedJarLibraries) {
-                copyJar(outStream, library, copiedEntries, serviceEntries);
-            }
+            sortAndCopyJars(jarLibraries, outStream, copiedEntries, serviceEntries);
 
             // Copy merged spi services.
-            for (Map.Entry<String, StringBuilder> entry : serviceEntries.entrySet()) {
-                String s = entry.getKey();
-                StringBuilder service = entry.getValue();
-                JarArchiveEntry e = new JarArchiveEntry(s);
-                outStream.putArchiveEntry(e);
-                outStream.write(service.toString().getBytes(StandardCharsets.UTF_8));
-                outStream.closeArchiveEntry();
+            copyMergedSpiServices(serviceEntries, outStream);
+        }
+    }
+
+    private void assembleTestExecutableJar(Path executableFilePath,
+                                           Manifest manifest,
+                                           Collection<JarLibrary> jarLibraries,
+                                           Path testSuiteJsonPath, String jsonCopyPath,
+                                           List<String> excludedClasses, String classPathTextCopyPath)
+            throws IOException {
+        // Used to prevent adding duplicated entries during the final jar creation.
+        HashMap<String, JarLibrary> copiedEntries = new HashMap<>();
+
+        // Used to process SPI related metadata entries separately. The reason is unlike the other entry types,
+        // service loader related information should be merged together in the final executable jar creation.
+        HashMap<String, StringBuilder> serviceEntries = new HashMap<>();
+
+        try (ZipArchiveOutputStream outStream = new ZipArchiveOutputStream(
+                new BufferedOutputStream(new FileOutputStream(executableFilePath.toString())))) {
+            writeManifest(manifest, outStream);
+
+            // Sort jar libraries list to avoid inconsistent jar reporting
+            sortAndCopyJars(jarLibraries, outStream, copiedEntries, serviceEntries);
+
+            // Copy merged spi services.
+            copyMergedSpiServices(serviceEntries, outStream);
+
+            // Write the test suite json file
+            JarArchiveEntry testSuiteJsonEntry = new JarArchiveEntry(jsonCopyPath);
+            outStream.putArchiveEntry(testSuiteJsonEntry);
+            outStream.write(Files.readAllBytes(testSuiteJsonPath));
+            outStream.closeArchiveEntry();
+
+            // Get the module jar paths and copy them to the executable jar
+            JarArchiveEntry classPathTextEntry = new JarArchiveEntry(classPathTextCopyPath);
+            outStream.putArchiveEntry(classPathTextEntry);
+            for (String path : excludedClasses) {
+                outStream.write((path + "\n").getBytes(StandardCharsets.UTF_8));
             }
+            outStream.closeArchiveEntry();
+        }
+    }
+
+    private static void copyMergedSpiServices(HashMap<String, StringBuilder> serviceEntries,
+                                              ZipArchiveOutputStream outStream) throws IOException {
+        for (Map.Entry<String, StringBuilder> entry : serviceEntries.entrySet()) {
+            String s = entry.getKey();
+            StringBuilder service = entry.getValue();
+            JarArchiveEntry e = new JarArchiveEntry(s);
+            outStream.putArchiveEntry(e);
+            outStream.write(service.toString().getBytes(StandardCharsets.UTF_8));
+            outStream.closeArchiveEntry();
+        }
+    }
+
+    private void sortAndCopyJars(Collection<JarLibrary> jarLibraries, ZipArchiveOutputStream outStream,
+                                 HashMap<String, JarLibrary> copiedEntries,
+                                 HashMap<String, StringBuilder> serviceEntries) throws IOException {
+
+        List<JarLibrary> sortedJarLibraries = jarLibraries.stream()
+                .sorted(Comparator.comparing(jarLibrary -> jarLibrary.path().getFileName()))
+                .toList();
+
+        // Copy all the jars
+        for (JarLibrary library : sortedJarLibraries) {
+            copyJar(outStream, library, copiedEntries, serviceEntries);
         }
     }
 
@@ -458,6 +549,15 @@ public class JBallerinaBackend extends CompilerBackend {
         return manifest;
     }
 
+    private Manifest createTestManifest() {
+        String mainClassName = "org.ballerinalang.test.runtime.BTestMain";
+        Manifest manifest = new Manifest();
+        Attributes mainAttributes = manifest.getMainAttributes();
+        mainAttributes.put(Attributes.Name.MANIFEST_VERSION, "1.0");
+        mainAttributes.put(Attributes.Name.MAIN_CLASS, mainClassName);
+        return manifest;
+    }
+
     /**
      * Copies a given jar file into the executable fat jar.
      *
@@ -468,58 +568,63 @@ public class JBallerinaBackend extends CompilerBackend {
      * @throws IOException If jar file copying is failed.
      */
     private void copyJar(ZipArchiveOutputStream outStream, JarLibrary jarLibrary,
-            HashMap<String, JarLibrary> copiedEntries, HashMap<String, StringBuilder> services) throws IOException {
-
-        ZipFile zipFile = new ZipFile(jarLibrary.path().toFile());
-        ZipArchiveEntryPredicate predicate = entry -> {
-            String entryName = entry.getName();
-            if (entryName.equals("META-INF/MANIFEST.MF")) {
-                return false;
-            }
-
-            if (entryName.startsWith("META-INF/services")) {
-                StringBuilder s = services.get(entryName);
-                if (s == null) {
-                    s = new StringBuilder();
-                    services.put(entryName, s);
+                         HashMap<String, JarLibrary> copiedEntries, HashMap<String,
+            StringBuilder> services) throws IOException {
+        if (Thread.currentThread().isInterrupted()) {
+            return;
+        }
+        try (ZipFile zipFile = new ZipFile(jarLibrary.path().toFile())) {
+            ZipArchiveEntryPredicate predicate = entry -> {
+                String entryName = entry.getName();
+                if (entryName.equals("META-INF/MANIFEST.MF")) {
+                    return false;
                 }
-                char c = '\n';
-
-                int len;
-                try (BufferedInputStream inStream = new BufferedInputStream(zipFile.getInputStream(entry))) {
-                    while ((len = inStream.read()) != -1) {
-                        c = (char) len;
-                        s.append(c);
+                if (entryName.equals("module-info.class")) {
+                    return false;
+                }
+                if (entryName.startsWith("META-INF/services")) {
+                    StringBuilder s = services.get(entryName);
+                    if (s == null) {
+                        s = new StringBuilder();
+                        services.put(entryName, s);
                     }
-                } catch (IOException e) {
-                    throw new RuntimeException(e);
+                    char c = '\n';
+
+                    int len;
+                    try (BufferedInputStream inStream = new BufferedInputStream(zipFile.getInputStream(entry))) {
+                        while ((len = inStream.read()) != -1) {
+                            c = (char) len;
+                            s.append(c);
+                        }
+                    } catch (IOException e) {
+                        throw new RuntimeException(e);
+                    }
+                    if (c != '\n') {
+                        s.append('\n');
+                    }
+
+                    // Its not required to copy SPI entries in here as we'll be adding merged SPI related entries
+                    // separately. Therefore the predicate should be set as false.
+                    return false;
                 }
-                if (c != '\n') {
-                    s.append('\n');
+
+                // Skip already copied files or excluded extensions.
+                if (isCopiedEntry(entryName, copiedEntries)) {
+                    addConflictedJars(jarLibrary, copiedEntries, entryName);
+                    return false;
                 }
+                if (isExcludedEntry(entryName)) {
+                    return false;
+                }
+                // SPIs will be merged first and then put into jar separately.
+                copiedEntries.put(entryName, jarLibrary);
+                return true;
+            };
 
-                // Its not required to copy SPI entries in here as we'll be adding merged SPI related entries
-                // separately. Therefore the predicate should be set as false.
-                return false;
-            }
-
-            // Skip already copied files or excluded extensions.
-            if (isCopiedEntry(entryName, copiedEntries)) {
-                addConflictedJars(jarLibrary, copiedEntries, entryName);
-                return false;
-            }
-            if (isExcludedEntry(entryName)) {
-                return false;
-            }
-            // SPIs will be merged first and then put into jar separately.
-            copiedEntries.put(entryName, jarLibrary);
-            return true;
-        };
-
-        // Transfers selected entries from this zip file to the output stream, while preserving its compression and
-        // all the other original attributes.
-        zipFile.copyRawEntries(outStream, predicate);
-        zipFile.close();
+            // Transfers selected entries from this zip file to the output stream, while preserving its compression and
+            // all the other original attributes.
+            zipFile.copyRawEntries(outStream, predicate);
+        }
     }
 
     private static boolean isCopiedEntry(String entryName, HashMap<String, JarLibrary> copiedEntries) {
@@ -559,6 +664,20 @@ public class JBallerinaBackend extends CompilerBackend {
         return executableFilePath;
     }
 
+    private Path emitTestExecutable(Path executableFilePath, HashSet<JarLibrary> jarDependencies,
+                          Path testSuiteJsonPath, String jsonCopyPath, List<String> excludedClasses,
+                          String classPathTextCopyPath) {
+        Manifest manifest = createTestManifest();
+        try {
+            assembleTestExecutableJar(executableFilePath, manifest, jarDependencies, testSuiteJsonPath, jsonCopyPath,
+                    excludedClasses, classPathTextCopyPath);
+        } catch (IOException e) {
+            throw new ProjectException("error while creating the test executable jar file for package '" +
+                    this.packageContext.packageName().toString() + "' : " + e.getMessage(), e);
+        }
+        return executableFilePath;
+    }
+
     private Path emitGraalExecutable(Path executableFilePath, List<Diagnostic> emitResultDiagnostics) {
         // Run create executable
         emitExecutable(executableFilePath, emitResultDiagnostics);
@@ -576,7 +695,7 @@ public class JBallerinaBackend extends CompilerBackend {
         nativeImageCommand += File.separator + BIN_DIR_NAME + File.separator
                 + (OS.contains("win") ? "native-image.cmd" : "native-image");
 
-        File commandExecutable = Paths.get(nativeImageCommand).toFile();
+        File commandExecutable = Path.of(nativeImageCommand).toFile();
         if (!commandExecutable.exists()) {
             throw new ProjectException("cannot find '" + commandExecutable.getName() + "' in the GRAALVM_HOME/bin " +
                     "directory. Install it using: gu install native-image");
@@ -641,32 +760,6 @@ public class JBallerinaBackend extends CompilerBackend {
         }
 
         return Path.of(FilenameUtils.removeExtension(executableFilePath.toString()));
-    }
-
-    private Map<String, byte[]> getResources(ModuleContext moduleContext) {
-        Map<String, byte[]> resourceMap = new HashMap<>();
-        for (DocumentId documentId : moduleContext.resourceIds()) {
-            String resourceName = ProjectConstants.RESOURCE_DIR_NAME + "/"
-                    + moduleContext.descriptor().org().toString() + "/"
-                    + moduleContext.moduleName().toString() + "/"
-                    + moduleContext.descriptor().version().value().major() + "/"
-                    + moduleContext.resourceContext(documentId).name();
-            resourceMap.put(resourceName, moduleContext.resourceContext(documentId).content());
-        }
-        return resourceMap;
-    }
-
-    private Map<String, byte[]> getAllResources(ModuleContext moduleContext) {
-        Map<String, byte[]> resourceMap = getResources(moduleContext);
-        for (DocumentId documentId : moduleContext.testResourceIds()) {
-            String resourceName = ProjectConstants.RESOURCE_DIR_NAME + "/"
-                    + moduleContext.descriptor().org() + "/"
-                    + moduleContext.moduleName().toString() + "/"
-                    + moduleContext.descriptor().version().value().major() + "/"
-                    + moduleContext.resourceContext(documentId).name();
-            resourceMap.put(resourceName, moduleContext.resourceContext(documentId).content());
-        }
-        return resourceMap;
     }
 
     private PlatformLibraryScope getPlatformLibraryScope(Map<String, Object> dependency) {
@@ -741,10 +834,11 @@ public class JBallerinaBackend extends CompilerBackend {
     public enum OutputType {
         EXEC("exec"),
         BALA("bala"),
-        GRAAL_EXEC("graal_exec")
+        GRAAL_EXEC("graal_exec"),
+        TEST("test")
         ;
 
-        private String value;
+        private final String value;
 
         OutputType(String value) {
             this.value = value;
@@ -842,4 +936,145 @@ public class JBallerinaBackend extends CompilerBackend {
                     this.packageContext().descriptor().name().toString()));
         }
     }
+
+    private PlatformLibrary codeGeneratedResourcesLibrary(PackageId packageId, PlatformLibraryScope scope) {
+        Package pkg = packageCache.getPackageOrThrow(packageId);
+        CompilationCache compilationCache = pkg.project().projectEnvironmentContext().getService(
+                CompilationCache.class);
+        return compilationCache.getPlatformSpecificLibrary(this, RESOURCE_DIR_NAME)
+                .map(path -> new JarLibrary(path, scope))
+                .orElse(null);
+    }
+
+    private Map<String, byte[]> getPackageResources(PackageContext packageContext) {
+        Map<String, byte[]> resourceMap = new HashMap<>();
+        for (DocumentId documentId : packageContext.resourceIds()) {
+            String resourceName = RESOURCE_DIR_NAME + "/"
+                    + packageContext.resourceContext(documentId).name();
+            resourceMap.put(resourceName, packageContext.resourceContext(documentId).content());
+        }
+        return resourceMap;
+    }
+
+    private Map<String, byte[]> getPackageAndTestResources(PackageContext packageContext) {
+        Map<String, byte[]> resourceMap = getPackageResources(packageContext);
+        for (DocumentId documentId : packageContext.testResourceIds()) {
+            String resourceName = RESOURCE_DIR_NAME + "/"
+                    + packageContext.resourceContext(documentId).name();
+            if (resourceMap.containsKey(resourceName)) {
+                addConflictingTestResourceDiag(packageContext.descriptor().toString(), resourceName);
+            }
+            resourceMap.put(resourceName, packageContext.resourceContext(documentId).content());
+        }
+        return resourceMap;
+    }
+
+    private void cacheResources(CompilationCache compilationCache, boolean skipTests) {
+        Map<String, byte[]> resources = new HashMap<>();
+        Map<String, String> resourceToPkgMap = new HashMap<>();
+        List<String> conflictingResourceFiles = new ArrayList<>();
+
+        // Add resources from dependencies in order
+        pkgResolution.allDependencies()
+                .stream()
+                .filter(pkgDep -> pkgDep.scope() != PackageDependencyScope.TEST_ONLY)
+                .filter(pkgDep -> !pkgDep.packageInstance().descriptor().isLangLibPackage())
+                .map(pkgDep -> pkgDep.packageInstance().packageContext())
+                .forEach(pkgContext -> {
+                    Map<String, byte[]> depResources = getPackageResources(pkgContext);
+                    for (Map.Entry<String, byte[]> entry : depResources.entrySet()) {
+                        if (resources.containsKey(entry.getKey())) {
+                            addConflictingDepResourceDiag(pkgContext.descriptor().toString(),
+                                    resourceToPkgMap.get(entry.getKey()), entry.getKey());
+                        }
+                        resources.put(entry.getKey(), entry.getValue());
+                        resourceToPkgMap.put(entry.getKey(), pkgContext.descriptor().toString());
+                    }
+                });
+        // Add resources from the package
+        Map<String, byte[]> packageResources = skipTests ? getPackageResources(packageContext) :
+                getPackageAndTestResources(packageContext);
+        for (Map.Entry<String, byte[]> entry : packageResources.entrySet()) {
+            if (resources.containsKey(entry.getKey())) {
+                addConflictingDepResourceDiag(packageContext.descriptor().toString(),
+                        resourceToPkgMap.get(entry.getKey()), entry.getKey());
+            }
+            resources.put(entry.getKey(), entry.getValue());
+            resourceToPkgMap.put(entry.getKey(), packageContext.descriptor().toString());
+        }
+
+        // Add generated resources and check for conflicts for build projects
+        if (!this.packageContext().project().kind().equals(ProjectKind.BALA_PROJECT)) {
+            Map<String, byte[]> generatedResources = ProjectUtils.getAllGeneratedResources(
+                    packageContext.project().generatedResourcesDir());
+            for (Map.Entry<String, byte[]> entry : generatedResources.entrySet()) {
+                if (resources.containsKey(entry.getKey())) {
+                    if (packageResources.containsKey(entry.getKey())) {
+                        conflictingResourceFiles.add(entry.getKey());
+                        continue;
+                    }
+                    // Issue a warning for conflicts with dependency resources
+                    addConflictingGenResourceDiag(resourceToPkgMap.get(entry.getKey()),
+                            packageContext.descriptor().toString(), entry.getKey());
+                }
+                resources.put(entry.getKey(), entry.getValue());
+            }
+            // Handle conflicting resources
+            if (!conflictingResourceFiles.isEmpty()) {
+                throw new ProjectException(getConflictingResourcesMsg(packageContext.descriptor().toString(),
+                        conflictingResourceFiles));
+            }
+        }
+
+        // Cache the resources if there are any
+        if (!resources.isEmpty()) {
+            try {
+                String resourceJarName = RESOURCE_DIR_NAME + JAR_FILE_NAME_SUFFIX;
+                CompiledJarFile resourceJar = new CompiledJarFile("");
+                resourceJar.jarEntries.putResourceEntries(resources);
+                try (ByteArrayOutputStream byteStream = resourceJar.toByteArrayStream()) {
+                    compilationCache.cachePlatformSpecificLibrary(this, resourceJarName, byteStream);
+                }
+            } catch (IOException e) {
+                throw new ProjectException("Failed to cache resources jar, package: " +
+                        packageContext.packageName(), e);
+            }
+        }
+    }
+
+    private void addConflictingDepResourceDiag(String packageDesc, String existingPackageDesc, String resourceName) {
+        DiagnosticInfo diagnosticInfo = new DiagnosticInfo(
+                ProjectDiagnosticErrorCode.CONFLICTING_RESOURCE_FILE.diagnosticId(),
+                String.format("detected conflicting resource files. The packages '" +
+                        existingPackageDesc + "' and '" + packageDesc +
+                        "' both export a resource with the same name '" + resourceName +
+                        "'. Picking the resource exported by '" + packageDesc + "'."),
+                DiagnosticSeverity.WARNING);
+        conflictedResourcesDiagnostics.add(new PackageDiagnostic(diagnosticInfo,
+                this.packageContext.descriptor().name().toString()));
+    }
+
+    private void addConflictingGenResourceDiag(String existingPackageDesc, String packageDesc, String resourceName) {
+        DiagnosticInfo diagnosticInfo = new DiagnosticInfo(
+                ProjectDiagnosticErrorCode.CONFLICTING_RESOURCE_FILE.diagnosticId(),
+                String.format("detected conflicting resource files. The package " + existingPackageDesc +
+                        "  and the generated resources for the current package '" + packageDesc +
+                        "' both export a resource with the same name '" + resourceName + "'. " +
+                        "Picking the generated resource file."),
+                DiagnosticSeverity.WARNING);
+        conflictedResourcesDiagnostics.add(new PackageDiagnostic(
+                diagnosticInfo, this.packageContext.descriptor().name().toString()));
+    }
+
+    private void addConflictingTestResourceDiag(String packageDesc, String resourceName) {
+        DiagnosticInfo diagnosticInfo = new DiagnosticInfo(
+                ProjectDiagnosticErrorCode.CONFLICTING_RESOURCE_FILE.diagnosticId(),
+                String.format("detected conflicting resource files. The test specific resources and package " +
+                        "resources for '" + packageDesc + "' both export a resource with the same name '" +
+                        resourceName + "'. Picking the test specific resource."),
+                DiagnosticSeverity.WARNING);
+        conflictedResourcesDiagnostics.add(new PackageDiagnostic(diagnosticInfo,
+                this.packageContext.descriptor().name().toString()));
+    }
+
 }
