@@ -34,6 +34,7 @@ import io.ballerina.compiler.api.symbols.TypeSymbol;
 import io.ballerina.compiler.api.symbols.UnionTypeSymbol;
 import io.ballerina.compiler.syntax.tree.AssignmentStatementNode;
 import io.ballerina.compiler.syntax.tree.ClassDefinitionNode;
+import io.ballerina.compiler.syntax.tree.ExplicitAnonymousFunctionExpressionNode;
 import io.ballerina.compiler.syntax.tree.ExpressionStatementNode;
 import io.ballerina.compiler.syntax.tree.FunctionDefinitionNode;
 import io.ballerina.compiler.syntax.tree.ModuleVariableDeclarationNode;
@@ -86,7 +87,6 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.function.Function;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 import static org.ballerinalang.langserver.common.utils.CommonUtil.LINE_SEPARATOR;
 
@@ -95,7 +95,7 @@ import static org.ballerinalang.langserver.common.utils.CommonUtil.LINE_SEPARATO
  *
  * @since 1.0.1
  */
-public class CodeActionUtil {
+public final class CodeActionUtil {
 
     private CodeActionUtil() {
     }
@@ -259,7 +259,7 @@ public class CodeActionUtil {
             RecordTypeSymbol recordTypeSymbol = (RecordTypeSymbol) typeDescriptor;
             // Anon Record
             String rType = FunctionGenerator.generateTypeSignature(importsAcceptor, typeDescriptor, context);
-            typesMap.put(recordTypeSymbol, (recordTypeSymbol.fieldDescriptors().size() > 0) ? rType : "record {}");
+            typesMap.put(recordTypeSymbol, (!recordTypeSymbol.fieldDescriptors().isEmpty()) ? rType : "record {}");
 
             // JSON - Record fields and rest type descriptor should be json subtypes
             boolean jsonSubType = recordTypeSymbol.fieldDescriptors().values().stream()
@@ -308,18 +308,15 @@ public class CodeActionUtil {
             getPossibleTypeSymbols(arrayTypeSymbol.memberTypeDescriptor(), context, importsAcceptor).entrySet()
                     .forEach(entry -> {
                         ArrayTypeSymbol newArrType = typeBuilder.ARRAY_TYPE.withType(entry.getKey()).build();
-                        String signature;
-                        switch (newArrType.memberTypeDescriptor().typeKind()) {
-                            case FUNCTION:
-                            case UNION:
+                        String signature = switch (newArrType.memberTypeDescriptor().typeKind()) {
+                            case FUNCTION, UNION -> {
                                 String typeName = FunctionGenerator.processModuleIDsInText(importsAcceptor,
                                         newArrType.memberTypeDescriptor().signature(), context);
-                                signature = "(" + typeName + ")[]";
-                                break;
-                            default:
-                                signature = FunctionGenerator.processModuleIDsInText(importsAcceptor,
-                                        newArrType.signature(), context);
-                        }
+                                yield "(" + typeName + ")[]";
+                            }
+                            default -> FunctionGenerator.processModuleIDsInText(importsAcceptor,
+                                    newArrType.signature(), context);
+                        };
                         typesMap.put(newArrType, signature);
                     });
         } else {
@@ -337,24 +334,18 @@ public class CodeActionUtil {
      */
     public static boolean isJsonMemberType(TypeSymbol typeSymbol) {
         // type json = () | boolean | int | float | decimal | string | json[] | map<json>;
-        switch (typeSymbol.typeKind()) {
-            case NIL:
-            case BOOLEAN:
-            case INT:
-            case FLOAT:
-            case DECIMAL:
-            case STRING:
-            case JSON:
-                return true;
-            case ARRAY:
-                ArrayTypeSymbol arrayTypeSymbol = (ArrayTypeSymbol) typeSymbol;
-                return isJsonMemberType(arrayTypeSymbol.memberTypeDescriptor());
-            case MAP:
-                MapTypeSymbol mapTypeSymbol = (MapTypeSymbol) typeSymbol;
-                return isJsonMemberType(mapTypeSymbol.typeParam());
-            default:
-                return false;
-        }
+        return switch (typeSymbol.typeKind()) {
+            case NIL,
+                 BOOLEAN,
+                 INT,
+                 FLOAT,
+                 DECIMAL,
+                 STRING,
+                 JSON -> true;
+            case ARRAY -> isJsonMemberType(((ArrayTypeSymbol) typeSymbol).memberTypeDescriptor());
+            case MAP -> isJsonMemberType(((MapTypeSymbol) typeSymbol).typeParam());
+            default -> false;
+        };
     }
 
     /**
@@ -399,7 +390,7 @@ public class CodeActionUtil {
 
         List<TypeSymbol> errorMembers = unionType.memberTypeDescriptors().stream()
                 .filter(typeSymbol -> CommonUtil.getRawType(typeSymbol).typeKind() == TypeDescKind.ERROR)
-                .collect(Collectors.toList());
+                .toList();
 
         List<TypeSymbol> members = new ArrayList<>(unionType.memberTypeDescriptors());
 
@@ -519,7 +510,7 @@ public class CodeActionUtil {
                                 .anyMatch(typeSymbol -> typeSymbol.typeKind() == TypeDescKind.NIL);
                         memberTypes.addAll(errorAndNonErrorTypedSymbols.getLeft().stream()
                                 .filter(typeSymbol -> typeSymbol.typeKind() != TypeDescKind.NIL)
-                                .collect(Collectors.toList()));
+                                .toList());
                         memberTypes.addAll(errorSymbolsToAdd);
                         UnionTypeSymbol newType = semanticModel.get().types().builder().UNION_TYPE
                                 .withMemberTypes(memberTypes.toArray(new TypeSymbol[0])).build();
@@ -566,7 +557,7 @@ public class CodeActionUtil {
         List<TypeSymbol> errorTypeSymbolsClone = new ArrayList<>(errorTypeSymbols);
         return errorTypeSymbolsClone.stream().filter(typeSymbol ->
                 errorTypeSymbols.stream().filter(other -> !other.signature().equals(typeSymbol.signature()))
-                        .noneMatch(typeSymbol::subtypeOf)).collect(Collectors.toList());
+                        .noneMatch(typeSymbol::subtypeOf)).toList();
     }
 
     private static Pair<List<TypeSymbol>, List<TypeSymbol>> getErrorAndNonErrorTypedSymbols(
@@ -661,12 +652,32 @@ public class CodeActionUtil {
     }
 
     /**
+     * Given a node, tries to find the {@link ExplicitAnonymousFunctionExpressionNode}
+     * which is enclosing the given node.
+     *
+     * @param matchedNode Node which is enclosed within a function
+     * @return Optional function definition node
+     */
+    public static Optional<ExplicitAnonymousFunctionExpressionNode> getEnclosingAnonFuncExpr(Node matchedNode) {
+        if (matchedNode == null) {
+            return Optional.empty();
+        }
+        while (matchedNode.parent() != null) {
+            if (matchedNode.kind() == SyntaxKind.EXPLICIT_ANONYMOUS_FUNCTION_EXPRESSION) {
+                return Optional.of((ExplicitAnonymousFunctionExpressionNode) matchedNode);
+            }
+            matchedNode = matchedNode.parent();
+        }
+        return Optional.empty();
+    }
+
+    /**
      * Given a node, tries to find the {@link FunctionDefinitionNode} which is enclosing the given node. Supports
      * {@link SyntaxKind#FUNCTION_DEFINITION}, {@link SyntaxKind#OBJECT_METHOD_DEFINITION} and
      * {@link SyntaxKind#RESOURCE_ACCESSOR_DEFINITION}s
      *
      * @param matchedNode Node which is enclosed within a function
-     * @return Optional function defintion node
+     * @return Optional function definition node
      */
     public static Optional<FunctionDefinitionNode> getEnclosedFunction(Node matchedNode) {
         if (matchedNode == null) {
@@ -953,7 +964,7 @@ public class CodeActionUtil {
      * Returns if a new line should be appended to a new text edit at module level.
      *
      * @param enclosingNode Node at module level which is enclosing the cursor.
-     * @return @link{Boolean} W
+     * @return {@link Boolean} W
      */
     public static boolean addNewLineAtEnd(Node enclosingNode) {
         Iterator<Node> iterator = enclosingNode.parent().children().iterator();
