@@ -24,12 +24,14 @@ import org.ballerinalang.langserver.completions.util.Snippet;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * A utility to provide completions related to query expressions.
  */
-public class QueryExpressionUtil {
+public final class QueryExpressionUtil {
+
+    private QueryExpressionUtil() {
+    }
 
     public static List<LSCompletionItem> getCommonKeywordCompletions(BallerinaCompletionContext context) {
         return Arrays.asList(
@@ -75,6 +77,6 @@ public class QueryExpressionUtil {
         langLibMethods.addAll(types.TYPEDESC.langLibMethods());
         langLibMethods.addAll(types.XML.langLibMethods());
 
-        return langLibMethods.stream().distinct().collect(Collectors.toList());
+        return langLibMethods.stream().distinct().toList();
     }
 }
