@@ -78,29 +78,22 @@ public class HoverObjectResolver {
      * @return {@link Hover} hover object.
      */
     public Hover getHoverObjectForSymbol(Symbol symbol) {
-        switch (symbol.kind()) {
-            case FUNCTION:
-                return getHoverObjectForSymbol((FunctionSymbol) symbol);
-            case METHOD:
-                return getHoverObjectForSymbol((MethodSymbol) symbol);
-            case RESOURCE_METHOD:
-                return getHoverObjectForSymbol((ResourceMethodSymbol) symbol);
-            case TYPE_DEFINITION:
-                return getHoverObjectForSymbol((TypeDefinitionSymbol) symbol);
-            case CLASS:
-                return getHoverObjectForSymbol((ClassSymbol) symbol);
-            case VARIABLE:
-                return getHoverObjectForSymbol((VariableSymbol) symbol);
-            case PARAMETER:
-                return getHoverObjectForSymbol((ParameterSymbol) symbol);
-            case TYPE:
-                if (symbol instanceof TypeReferenceTypeSymbol) {
-                    return getHoverObjectForSymbol(((TypeReferenceTypeSymbol) symbol).definition());
+        return switch (symbol.kind()) {
+            case FUNCTION -> getHoverObjectForSymbol((FunctionSymbol) symbol);
+            case METHOD -> getHoverObjectForSymbol((MethodSymbol) symbol);
+            case RESOURCE_METHOD -> getHoverObjectForSymbol((ResourceMethodSymbol) symbol);
+            case TYPE_DEFINITION -> getHoverObjectForSymbol((TypeDefinitionSymbol) symbol);
+            case CLASS -> getHoverObjectForSymbol((ClassSymbol) symbol);
+            case VARIABLE -> getHoverObjectForSymbol((VariableSymbol) symbol);
+            case PARAMETER -> getHoverObjectForSymbol((ParameterSymbol) symbol);
+            case TYPE -> {
+                if (symbol instanceof TypeReferenceTypeSymbol refTypeSymbol) {
+                    yield getHoverObjectForSymbol(refTypeSymbol.definition());
                 }
-                return HoverUtil.getHoverObject();
-            default:
-                return HoverUtil.getDescriptionOnlyHoverObject(symbol);
-        }
+                yield HoverUtil.getHoverObject();
+            }
+            default -> HoverUtil.getDescriptionOnlyHoverObject(symbol);
+        };
     }
 
     private Hover getHoverObjectForSymbol(VariableSymbol variableSymbol) {
@@ -197,7 +190,7 @@ public class HoverObjectResolver {
                 String desc = paramsMap.getOrDefault(paramName, "");
                 return MarkupUtils.quotedString(NameUtil.getModifiedTypeName(context, param.typeDescriptor())) + " "
                         + MarkupUtils.italicString(MarkupUtils.boldString(paramName)) + " : " + desc;
-            }).collect(Collectors.toList()));
+            }).toList());
             params.addAll(functionSymbol.typeDescriptor().params().get().stream().map(param -> {
                 if (param.getName().isEmpty()) {
                     return MarkupUtils.quotedString(NameUtil
@@ -226,7 +219,7 @@ public class HoverObjectResolver {
                 }
                 return MarkupUtils.quotedString(NameUtil.getModifiedTypeName(context, param.typeDescriptor())) + " "
                         + MarkupUtils.italicString(MarkupUtils.boldString(paramName)) + " : " + desc + defaultValueEdit;
-            }).collect(Collectors.toList()));
+            }).toList());
 
             Optional<ParameterSymbol> restParam = functionSymbol.typeDescriptor().restParam();
             if (restParam.isPresent()) {
@@ -280,7 +273,7 @@ public class HoverObjectResolver {
                                 .getModifiedTypeName(context, fieldEntry.getValue().typeDescriptor());
                         return MarkupUtils.quotedString(typeName) + " "
                                 + MarkupUtils.italicString(MarkupUtils.boldString(fieldEntry.getKey())) + " : " + desc;
-                    }).collect(Collectors.toList()));
+                    }).toList());
             Optional<TypeSymbol> restTypeDesc = recordType.restTypeDescriptor();
             restTypeDesc.ifPresent(typeSymbol ->
                     params.add(MarkupUtils.quotedString(NameUtil.getModifiedTypeName(context, typeSymbol) + "...")));
@@ -317,7 +310,7 @@ public class HoverObjectResolver {
                             return MarkupUtils.quotedString(modifiedTypeName) + " " +
                                     MarkupUtils.italicString(MarkupUtils.boldString(fieldEntry.getKey()))
                                     + " : " + desc;
-                        }).collect(Collectors.toList()));
+                        }).toList());
                 if (params.size() > 1) {
                     hoverContent.add(String.join(CommonUtil.MD_LINE_SEPARATOR, params));
                 }
@@ -381,8 +374,7 @@ public class HoverObjectResolver {
                     typeSymbol = classTypeSymbol.get();
                 }
 
-                if (typeSymbol instanceof ClassSymbol) {
-                    ClassSymbol classSymbol = (ClassSymbol) typeSymbol;
+                if (typeSymbol instanceof ClassSymbol classSymbol) {
                     if (classSymbol.initMethod().isEmpty()) {
                         break;
                     }
