@@ -37,7 +37,6 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 /**
  * Test the watched file changes.
@@ -129,7 +128,7 @@ public class TestDidChangeWatchedFiles {
     private void sendMultipleFileChanges(Map<Path, FileChangeType> changesMap) {
         List<FileEvent> fileEvents = changesMap.entrySet().stream()
                 .map(entry -> new FileEvent(entry.getKey().toUri().toString(), entry.getValue()))
-                .collect(Collectors.toList());
+                .toList();
 
         DidChangeWatchedFilesParams params = new DidChangeWatchedFilesParams();
         params.setChanges(fileEvents);
