@@ -27,7 +27,7 @@ import java.io.File;
 import java.io.IOException;
 import java.net.InetAddress;
 import java.net.UnknownHostException;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
@@ -46,25 +46,25 @@ import static org.ballerinalang.test.context.Constant.BALLERINA_AGENT_PATH;
  * @since 0.982.0
  */
 public class BServerInstance implements BServer {
-    private static final Logger log = LoggerFactory.getLogger(BServerInstance.class);
+    private static final Logger LOG = LoggerFactory.getLogger(BServerInstance.class);
     private static final String JAVA_OPTS = "JAVA_OPTS";
-    private static final String agentHost = "localhost";
-    private BalServer balServer;
+    private static final String AGENT_HOST = "localhost";
+    private final BalServer balServer;
     private int agentPort;
     private String agentArgs;
     private boolean agentsAdded = false;
     private Process process;
     private ServerLogReader serverInfoLogReader;
     private ServerLogReader serverErrorLogReader;
-    private Set<LogLeecher> tmpInfoLeechers = ConcurrentHashMap.newKeySet();
-    private Set<LogLeecher> tmpErrorLeechers = ConcurrentHashMap.newKeySet();
+    private final Set<LogLeecher> tmpInfoLeechers = ConcurrentHashMap.newKeySet();
+    private final Set<LogLeecher> tmpErrorLeechers = ConcurrentHashMap.newKeySet();
     private int[] requiredPorts;
 
-    private static InetAddress address;
+    private static final InetAddress ADDRESS;
 
     static {
         try {
-            address = InetAddress.getByName(agentHost);
+            ADDRESS = InetAddress.getByName(AGENT_HOST);
         } catch (UnknownHostException e) {
             throw new RuntimeException(e);
         }
@@ -87,20 +87,18 @@ public class BServerInstance implements BServer {
     }
 
     private void configureAgentArgs() throws BallerinaTestException {
-        String balAgent = Paths.get(System.getProperty(BALLERINA_AGENT_PATH)).toString();
+        String balAgent = Path.of(System.getProperty(BALLERINA_AGENT_PATH)).toString();
 
         if (balAgent == null || balAgent.isEmpty()) {
             throw new BallerinaTestException("Cannot start server, Ballerina agent not provided");
         }
 
-        agentArgs = "-javaagent:" + balAgent + "=host=" + agentHost + ",port=" + agentPort
+        agentArgs = "-javaagent:" + balAgent + "=host=" + AGENT_HOST + ",port=" + agentPort
                 + ",exitStatus=1,timeout=15000,killStatus=5 ";
 
         // add jacoco agent
-        String jacocoArgLine = "-javaagent:" + Paths.get(balServer.getServerHome())
-                .resolve("bre").resolve("lib").resolve("jacocoagent.jar").toString() + "=destfile=" +
-                Paths.get(System.getProperty("user.dir"))
-                        .resolve("build").resolve("jacoco").resolve("test.exec");
+        String jacocoArgLine = "-javaagent:" + Path.of(balServer.getServerHome(), "bre/lib/jacocoagent.jar")
+                + "=destfile=" + Path.of(System.getProperty("user.dir"), "build/jacoco/test.exec");
 
         agentArgs = jacocoArgLine + " " + agentArgs + " ";
     }
@@ -226,7 +224,7 @@ public class BServerInstance implements BServer {
      */
     @Override
     public void shutdownServer() throws BallerinaTestException {
-        log.info("Stopping server..");
+        LOG.info("Stopping server..");
         Map<String, String> headers = new HashMap<>();
         headers.put("Content-Type", "text/plain");
         try {
@@ -236,7 +234,7 @@ public class BServerInstance implements BServer {
                 throw new BallerinaTestException("Error shutting down the server, invalid response - "
                         + response.getData());
             }
-            cleanupServer(address);
+            cleanupServer(ADDRESS);
         } catch (IOException e) {
             throw new BallerinaTestException("Error shutting down the server, error - " + e.getMessage(), e);
         }
@@ -249,7 +247,7 @@ public class BServerInstance implements BServer {
      */
     @Override
     public void killServer() throws BallerinaTestException {
-        log.info("Stopping server..");
+        LOG.info("Stopping server..");
         Map<String, String> headers = new HashMap<>();
         headers.put("Content-Type", "text/plain");
         try {
@@ -259,7 +257,7 @@ public class BServerInstance implements BServer {
                 throw new BallerinaTestException("Error killing the server, invalid response - "
                         + response.getData());
             }
-            cleanupServer(address);
+            cleanupServer(ADDRESS);
         } catch (IOException e) {
             throw new BallerinaTestException("Error shutting down the server, error - " + e.getMessage(), e);
         }
@@ -268,7 +266,7 @@ public class BServerInstance implements BServer {
     private void cleanupServer(InetAddress address) {
         //wait until port to close
         Utils.waitForPortsToClose(requiredPorts, 30000, address);
-        log.info("Server Stopped Successfully");
+        LOG.info("Server Stopped Successfully");
     }
 
     private synchronized void addJavaAgents(Map<String, String> envProperties) {
@@ -440,7 +438,7 @@ public class BServerInstance implements BServer {
                         int[] requiredPorts)
             throws BallerinaTestException {
         File commandDir = new File(balServer.getServerHome());
-        executeJarFile(Paths.get(sourceRoot, "target", "bin", packageName + ".jar").toFile().getPath(),
+        executeJarFile(Path.of(sourceRoot, "target", "bin", packageName + ".jar").toFile().getPath(),
                        args, envProperties, commandDir, requiredPorts);
     }
 
@@ -456,8 +454,8 @@ public class BServerInstance implements BServer {
     private void runJar(String balFile, String[] args, Map<String, String> envProperties, int[] requiredPorts)
             throws BallerinaTestException {
         File commandDir = new File(balServer.getServerHome());
-        String balFileName = Paths.get(balFile).getFileName().toString();
-        String jarPath = Paths.get(commandDir.getAbsolutePath(), balFileName.substring(0, balFileName.length() -
+        String balFileName = Path.of(balFile).getFileName().toString();
+        String jarPath = Path.of(commandDir.getAbsolutePath(), balFileName.substring(0, balFileName.length() -
                 4) + ".jar").toString();
         executeJarFile(jarPath, args, envProperties, commandDir, requiredPorts);
     }
@@ -482,9 +480,9 @@ public class BServerInstance implements BServer {
             this.requiredPorts = ArrayUtils.addAll(this.requiredPorts, agentPort);
 
             //Check whether agent port is available.
-            Utils.checkPortsAvailability(this.requiredPorts, address);
+            Utils.checkPortsAvailability(this.requiredPorts, ADDRESS);
 
-            log.info("Starting Ballerina server..");
+            LOG.info("Starting Ballerina server..");
 
             List<String> runCmdSet = new ArrayList<>();
             runCmdSet.add("java");
@@ -513,11 +511,11 @@ public class BServerInstance implements BServer {
             serverErrorLogReader = new ServerLogReader("errorStream", process.getErrorStream());
             tmpErrorLeechers.forEach(leecher -> serverErrorLogReader.addLeecher(leecher));
             serverErrorLogReader.start();
-            log.info("Waiting for port " + agentPort + " to open");
+            LOG.info("Waiting for port " + agentPort + " to open");
             long timeout = 1000L * 60 * 10;
             //TODO: Need to reduce the timeout after build time improvements
-            Utils.waitForPortsToOpen(new int[]{agentPort}, timeout, false, address);
-            log.info("Server Started Successfully.");
+            Utils.waitForPortsToOpen(new int[]{agentPort}, timeout, false, ADDRESS);
+            LOG.info("Server Started Successfully.");
         } catch (IOException e) {
             throw new BallerinaTestException("Error starting services", e);
         }
