@@ -28,7 +28,7 @@ import org.testng.annotations.Test;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.util.stream.Stream;
 
 import static java.nio.file.StandardCopyOption.REPLACE_EXISTING;
 import static org.ballerinalang.test.context.LogLeecher.LeecherType.ERROR;
@@ -45,10 +45,10 @@ public class BindgenTestCase extends BaseTest {
     private BMainInstance balClient;
 
     @BeforeClass()
-    public void setUp() throws IOException, BallerinaTestException {
+    public void setUp() throws IOException {
         tempProjectsDir = Files.createTempDirectory("bal-test-integration-bindgen-");
         // copy TestProject to a temp
-        Path testProject = Paths.get("src", "test", "resources", "bindgen")
+        Path testProject = Path.of("src", "test", "resources", "bindgen")
                 .toAbsolutePath();
         copyFolder(testProject, tempProjectsDir);
         balClient = new BMainInstance(balServer);
@@ -89,7 +89,9 @@ public class BindgenTestCase extends BaseTest {
     }
 
     public void copyFolder(Path src, Path dest) throws IOException {
-        Files.walk(src).forEach(source -> copy(source, dest.resolve(src.relativize(source))));
+        try (Stream<Path> paths = Files.walk(src)) {
+            paths.forEach(source -> copy(source, dest.resolve(src.relativize(source))));
+        }
     }
 
     private void copy(Path source, Path dest) {
