@@ -12,7 +12,6 @@ import java.util.Collections;
 import java.util.List;
 import java.util.function.BiFunction;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static org.wso2.ballerinalang.compiler.packaging.Patten.path;
@@ -67,7 +66,7 @@ public class PattenTest {
                                               null, null);
         Patten subject = new Patten(path("hello", "world"));
 
-        List<String> strings = subject.convert(mock, null).collect(Collectors.toList());
+        List<String> strings = subject.convert(mock, null).toList();
 
         Assert.assertEquals(strings, Collections.singletonList("root-dir > hello > world"));
     }
@@ -82,7 +81,7 @@ public class PattenTest {
                                               null, null);
         Patten subject = new Patten(Patten.LATEST_VERSION_DIR);
 
-        List<String> strings = subject.convert(mock, null).collect(Collectors.toList());
+        List<String> strings = subject.convert(mock, null).toList();
 
         Assert.assertEquals(strings, Arrays.asList("root-dir > cache1",
                                                    "root-dir > cache2",
@@ -117,7 +116,7 @@ public class PattenTest {
                                                              s + " > dir2 > dir3 > f.bal"), null);
         Patten subject = new Patten(Patten.WILDCARD_SOURCE);
 
-        List<String> strings = subject.convert(mock, null).collect(Collectors.toList());
+        List<String> strings = subject.convert(mock, null).toList();
 
         Assert.assertEquals(strings, Arrays.asList("project-dir > dir1 > x.bal",
                                                    "project-dir > y.bal",
@@ -140,7 +139,7 @@ public class PattenTest {
                                               null, null);
         Patten subject = new Patten(Patten.LATEST_VERSION_DIR);
 
-        List<String> strings = subject.convert(mock, null).limit(1).collect(Collectors.toList());
+        List<String> strings = subject.convert(mock, null).limit(1).toList();
 
         Assert.assertTrue(strings.isEmpty());
     }
@@ -157,7 +156,7 @@ public class PattenTest {
                                                              q + " > dir2 > dir3 > f.bal"), null);
         Patten subject = new Patten(path("hello"), Patten.LATEST_VERSION_DIR, path("world"), Patten.WILDCARD_SOURCE);
 
-        List<String> strings = subject.convert(mock, null).collect(Collectors.toList());
+        List<String> strings = subject.convert(mock, null).toList();
 
         Assert.assertEquals(strings, Arrays.asList("my-dir > hello > cache1 > world > dir1 > x.bal",
                                                    "my-dir > hello > cache1 > world > y.bal",
